--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3800,6 +3800,7 @@ payload:
   - '+.51chuli.com'
   - '+.51cir.com'
   - '+.51cjyy.com'
+  - '+.51cocoa.com'
   - '+.51code.com'
   - '+.51cok.com'
   - '+.51comp.com'
@@ -49806,6 +49807,7 @@ payload:
   - '+.swiftstar.net'
   - '+.swijoy.com'
   - '+.switchvip.com'
+  - '+.switchxiazai.com'
   - '+.swjoy.com'
   - '+.swkong.com'
   - '+.swliuxue.com'
@@ -53670,6 +53672,7 @@ payload:
   - '+.vckbase.com'
   - '+.vcloudgtm.com'
   - '+.vclusters.com'
+  - '+.vcnews.com'
   - '+.vcode.cc'
   - '+.vcomic.com'
   - '+.vcomputes.com'
@@ -54988,6 +54991,7 @@ payload:
   - '+.weijiu.org'
   - '+.weijiuxin.com'
   - '+.weijj.com'
+  - '+.weijq.com'
   - '+.weiju.net'
   - '+.weijuju.com'
   - '+.weikaowu.com'
