--- a/GoogleCN.yaml
+++ b/GoogleCN.yaml
@@ -1,6 +1,7 @@
 payload:
   - '+.265.com'
   - '+.2mdn-cn.net'
+  - '+.2mdn.net'
   - '+.admob-cn.com'
   - '+.app-measurement-cn.com'
   - '+.app-measurement.com'
@@ -9,6 +10,7 @@ payload:
   - '+.beacons2.gvt2.com'
   - '+.beacons3.gvt2.com'
   - '+.c.admob.com'
+  - '+.checkin.gstatic.com'
   - '+.clickserve.dartsearch.net'
   - '+.clientservices.googleapis.com'
   - '+.connectivitycheck.gstatic.com'
@@ -17,6 +19,7 @@ payload:
   - '+.doubleclick.net'
   - '+.firebase-settings.crashlytics.com'
   - '+.fonts.googleapis.com'
+  - '+.fonts.gstatic.com'
   - '+.g1.gstatic.com'
   - '+.g2.gstatic.com'
   - '+.google-analytics-cn.com'
@@ -32,7 +35,6 @@ payload:
   - '+.googlesyndication-cn.com'
   - '+.googlesyndication.com'
   - '+.googletagmanager-cn.com'
-  - '+.googletagmanager.com'
   - '+.googletagservices-cn.com'
   - '+.googletagservices.com'
   - '+.googletraveladservices-cn.com'
