--- a/directbak.yaml
+++ b/directbak.yaml
@@ -33,6 +33,7 @@ payload:
   - '+.00544.com'
   - '+.0061.com.au'
   - '+.00615.net'
+  - '+.007.pub'
   - '+.00791.com'
   - '+.007hd.com'
   - '+.007manhua.com'
@@ -1305,7 +1306,6 @@ payload:
   - '+.15yl.com'
   - '+.160.com'
   - '+.160.me'
-  - '+.160edu.net'
   - '+.160yx.com'
   - '+.161580.com'
   - '+.1616.net'
@@ -4310,6 +4310,7 @@ payload:
   - '+.521szlx.com'
   - '+.521tieba.com'
   - '+.521up.com'
+  - '+.521wmy.com'
   - '+.52237377.com'
   - '+.522g.com'
   - '+.523333.com'
@@ -5465,6 +5466,7 @@ payload:
   - '+.6tiantian.com'
   - '+.6tie.com'
   - '+.6v.com'
+  - '+.6v6.work'
   - '+.6vps.net'
   - '+.6wan.com'
   - '+.6wtx.com'
@@ -11746,7 +11748,6 @@ payload:
   - '+.brand4x4.com'
   - '+.brandcn.com'
   - '+.brandvista.com'
-  - '+.brandzg.com'
   - '+.brbtyt.com'
   - '+.breadtrip.com'
   - '+.breakingnewsireland.com'
@@ -12293,7 +12294,6 @@ payload:
   - '+.cafagame.com'
   - '+.cafamuseum.org'
   - '+.cafebeta.com'
-  - '+.cafecole-maison.com'
   - '+.caffci.org'
   - '+.caffeenglish.com'
   - '+.cagetest.com'
@@ -13389,6 +13389,7 @@ payload:
   - '+.chabeichong.com'
   - '+.chachaba.com'
   - '+.chachaqu.com'
+  - '+.chacheliang.com'
   - '+.chachongba.cc'
   - '+.chacuo.net'
   - '+.chadan.wang'
@@ -13425,6 +13426,7 @@ payload:
   - '+.chaishiguan.com'
   - '+.chaitin.com'
   - '+.chajiandaquan.com'
+  - '+.chajiaotong.com'
   - '+.chajie.com'
   - '+.chajn.org'
   - '+.chakahao.com'
@@ -20608,7 +20610,6 @@ payload:
   - '+.enbrands.com'
   - '+.enec.net'
   - '+.enelcn.com'
-  - '+.enen6.com'
   - '+.enet360.com'
   - '+.enetedu.com'
   - '+.enfi.vip'
@@ -21100,7 +21101,6 @@ payload:
   - '+.extfans.com'
   - '+.exthin.net'
   - '+.extmail.org'
-  - '+.extremep2p.com'
   - '+.extron-tech.com'
   - '+.extstars.com'
   - '+.exuanfang.cc'
@@ -28514,6 +28514,7 @@ payload:
   - '+.hysdknb.com'
   - '+.hysec.com'
   - '+.hysemi-ic.com'
+  - '+.hyshi.net'
   - '+.hysteeltube.com'
   - '+.hyt368.com'
   - '+.hytcshare.com'
@@ -30013,7 +30014,6 @@ payload:
   - '+.intsig.net'
   - '+.intsweet.com'
   - '+.intwho.com'
-  - '+.intwk.com'
   - '+.inuobi.com'
   - '+.inuu6.com'
   - '+.inveno.com'
@@ -31043,7 +31043,6 @@ payload:
   - '+.jdxs5200.net'
   - '+.jdxzz.com'
   - '+.jdy.com'
-  - '+.jdy8848.com'
   - '+.jdycdn.com'
   - '+.jdyou.com'
   - '+.jdypf.com'
@@ -32217,7 +32216,6 @@ payload:
   - '+.jmhd8.com'
   - '+.jmj1995.com'
   - '+.jmjc.tech'
-  - '+.jmjiuchang.com'
   - '+.jmjxc.com'
   - '+.jmkjmob2.xyz'
   - '+.jmkjmob5.xyz'
@@ -33183,6 +33181,7 @@ payload:
   - '+.jzrb.com'
   - '+.jzrc.net'
   - '+.jzrsrc.com'
+  - '+.jzsadlkfadf.com'
   - '+.jzsc.net'
   - '+.jzsc8.com'
   - '+.jzsgzmhjyxgs.com'
@@ -33448,7 +33447,6 @@ payload:
   - '+.kaocat.com'
   - '+.kaochong.com'
   - '+.kaoder.com'
-  - '+.kaodianer.com'
   - '+.kaogua.com'
   - '+.kaojionline.com'
   - '+.kaola.com.hk'
@@ -33533,6 +33531,7 @@ payload:
   - '+.kbtv.me'
   - '+.kbw2018.com'
   - '+.kbyun.com'
+  - '+.kcdn0.com'
   - '+.kcdns.net'
   - '+.kcdnvip.com'
   - '+.kchance.com'
@@ -37086,7 +37085,6 @@ payload:
   - '+.lvshi567.com'
   - '+.lvshiminglu.com'
   - '+.lvshou.com'
-  - '+.lvshouwe.com'
   - '+.lvshunfang.com'
   - '+.lvshunmuseum.org'
   - '+.lvsongguo.com'
@@ -37908,7 +37906,6 @@ payload:
   - '+.mchat.com'
   - '+.mchifi.com'
   - '+.mcidc.net'
-  - '+.mcjcjx.com'
   - '+.mcjd.net'
   - '+.mcmssc.com'
   - '+.mcooks.com'
@@ -38964,7 +38961,6 @@ payload:
   - '+.mnihyc.com'
   - '+.mnjj.group'
   - '+.mnkan.com'
-  - '+.mnlscz.com'
   - '+.mnoswqa.com'
   - '+.mnpz8.com'
   - '+.mnwww.com'
@@ -41478,6 +41474,7 @@ payload:
   - '+.ooopic.com'
   - '+.ooopn.com'
   - '+.ooppoo.com'
+  - '+.ootu.cc'
   - '+.oouee.com'
   - '+.oouyan.com'
   - '+.ooxx.me'
@@ -43854,6 +43851,7 @@ payload:
   - '+.qijee.com'
   - '+.qiji.tech'
   - '+.qijiadianzi.com'
+  - '+.qijian99.com'
   - '+.qijianzs.com'
   - '+.qijiapay.com'
   - '+.qijiarui-test.com'
@@ -44177,6 +44175,7 @@ payload:
   - '+.qiyexinyong.org'
   - '+.qiyexun.com'
   - '+.qiyexxw.com'
+  - '+.qiyeyougou.com'
   - '+.qiyeyouxiang.net'
   - '+.qiyi.com'
   - '+.qiyicc.com'
@@ -44411,6 +44410,7 @@ payload:
   - '+.qqpao.com'
   - '+.qqpifu.com'
   - '+.qqppt.com'
+  - '+.qqpss.cc'
   - '+.qqq.tv'
   - '+.qqqiyemail.com'
   - '+.qqqnm.com'
@@ -47327,7 +47327,6 @@ payload:
   - '+.shiciyun.com'
   - '+.shida66.com'
   - '+.shidaedu.vip'
-  - '+.shidaiyuhu.com'
   - '+.shidapx.com'
   - '+.shidastudy.com'
   - '+.shidi.org'
@@ -48593,6 +48592,7 @@ payload:
   - '+.smtdc.com'
   - '+.smth.org'
   - '+.smthome.net'
+  - '+.smtlzb.com'
   - '+.smtsvs.com'
   - '+.smttouch.com'
   - '+.smtvip.com'
@@ -49802,7 +49802,6 @@ payload:
   - '+.swakopuranium.com'
   - '+.swang8.com'
   - '+.swansea86.com'
-  - '+.swansonchina.com'
   - '+.swap.wang'
   - '+.swaqds.com'
   - '+.swarma.net'
@@ -50634,6 +50633,7 @@ payload:
   - '+.taokouling.com'
   - '+.taoku.com'
   - '+.taolusm.com'
+  - '+.taoluzhibo56.com'
   - '+.taolx.com'
   - '+.taomanhua.com'
   - '+.taomee.com'
@@ -51512,7 +51512,6 @@ payload:
   - '+.tips1000.com'
   - '+.tiqiaa.com'
   - '+.tiqianle.com'
-  - '+.tired.im'
   - '+.tiruna-cn.com'
   - '+.tisgame.com'
   - '+.tisino.com'
@@ -56448,6 +56447,7 @@ payload:
   - '+.writebp.com'
   - '+.wrjzj.com'
   - '+.wrkdih.com'
+  - '+.wrl163.com'
   - '+.wrltxt.com'
   - '+.wrmjk.com'
   - '+.wrsa.net'
@@ -58126,7 +58126,6 @@ payload:
   - '+.xindie.net'
   - '+.xindingwealth.com'
   - '+.xindns.com'
-  - '+.xindns.mobi'
   - '+.xindong.com'
   - '+.xinduihuan.com'
   - '+.xinduo.com'
@@ -58524,6 +58523,7 @@ payload:
   - '+.xixisys.com'
   - '+.xixiwg.com'
   - '+.xiyacs.com'
+  - '+.xiyamaoyi.com'
   - '+.xiyang1.icu'
   - '+.xiyijiang.com'
   - '+.xiyin.life'
