--- a/anti-ad-clash.yaml
+++ b/anti-ad-clash.yaml
@@ -1,8 +1,8 @@
 payload:
   - DOMAIN-SUFFIX,#TITLE=anti-AD
-  - DOMAIN-SUFFIX,#VER=20221002030019
+  - DOMAIN-SUFFIX,#VER=20221002200552
   - DOMAIN-SUFFIX,#URL=https://github.com/privacy-protection-tools/anti-AD
-  - DOMAIN-SUFFIX,#TOTAL_LINES=66152
+  - DOMAIN-SUFFIX,#TOTAL_LINES=66166
   - DOMAIN-SUFFIX,000123456789.online
   - DOMAIN-SUFFIX,000123456789.site
   - DOMAIN-SUFFIX,000123456789.space
@@ -23361,6 +23361,7 @@ payload:
   - DOMAIN-SUFFIX,fkpnyinj.com
   - DOMAIN-SUFFIX,fktkwb.cn
   - DOMAIN-SUFFIX,fkub.xyz
+  - DOMAIN-SUFFIX,datareport.fkw.com
   - DOMAIN-SUFFIX,fkxgmbooixbugd.com
   - DOMAIN-SUFFIX,fl-ads.com
   - DOMAIN-SUFFIX,d9w.fl1c.com
@@ -55660,6 +55661,7 @@ payload:
   - DOMAIN-SUFFIX,todayjiaxiang.cn
   - DOMAIN-SUFFIX,todaysbestsellers.com
   - DOMAIN-SUFFIX,oms.todaysparent.com
+  - DOMAIN-SUFFIX,st.todesk.com
   - DOMAIN-SUFFIX,sm1.todgo.com
   - DOMAIN-SUFFIX,sm2.todgo.com
   - DOMAIN-SUFFIX,todhamilton.pro
@@ -61998,6 +62000,18 @@ payload:
   - DOMAIN-SUFFIX,xiaogouzhuanqian.cn
   - DOMAIN-SUFFIX,xiaohead.com
   - DOMAIN-SUFFIX,xiaohei.com
+  - DOMAIN-SUFFIX,s.xiaohongshu.com
+  - DOMAIN-SUFFIX,crash.xiaohongshu.com
+  - DOMAIN-SUFFIX,apppush-sh5.xiaohongshu.com
+  - DOMAIN-SUFFIX,flash.xiaohongshu.com
+  - DOMAIN-SUFFIX,referee.xiaohongshu.com
+  - DOMAIN-SUFFIX,edith.xiaohongshu.com
+  - DOMAIN-SUFFIX,vi.xiaohongshu.com
+  - DOMAIN-SUFFIX,v.xiaohongshu.com
+  - DOMAIN-SUFFIX,ci.xiaohongshu.com
+  - DOMAIN-SUFFIX,store.xiaohongshu.com
+  - DOMAIN-SUFFIX,starry.xiaohongshu.com
+  - DOMAIN-SUFFIX,apppush.xiaohongshu.com
   - DOMAIN-SUFFIX,xiaohuangshu.me
   - DOMAIN-SUFFIX,yumcs.xiaohuau.xyz
   - DOMAIN-SUFFIX,xiaohui2.cn
