--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2727,7 +2727,6 @@ payload:
   - '+.33map.com'
   - '+.33map.net'
   - '+.33oncall.com'
-  - '+.33or.com'
   - '+.33sp.com'
   - '+.33trip.com'
   - '+.33xs.com'
@@ -5924,7 +5923,6 @@ payload:
   - '+.800xs.net'
   - '+.800you.com'
   - '+.800youhuo.com'
-  - '+.801167.com'
   - '+.802203.com'
   - '+.807.com'
   - '+.80710.com'
@@ -6635,7 +6633,6 @@ payload:
   - '+.92ez.com'
   - '+.92fox.com'
   - '+.92game.net'
-  - '+.92gushi.com'
   - '+.92hidc.net'
   - '+.92jiangbei.com'
   - '+.92kaifa.com'
@@ -7129,7 +7126,6 @@ payload:
   - '+.9sky.com'
   - '+.9sleep.org'
   - '+.9stor.com'
-  - '+.9subi.com'
   - '+.9syw.com'
   - '+.9taobao.com'
   - '+.9thws.com'
@@ -7858,7 +7854,6 @@ payload:
   - '+.aiimooc.com'
   - '+.aiioii.com'
   - '+.aiizen.net'
-  - '+.aijc.net'
   - '+.aiji66.com'
   - '+.aijianji.com'
   - '+.aijiatui.com'
@@ -11138,7 +11133,6 @@ payload:
   - '+.bjhwbr.com'
   - '+.bjhzkq.com'
   - '+.bjiab.com'
-  - '+.bjicjm.com'
   - '+.bjidc.net'
   - '+.bjidit.com'
   - '+.bjipwqzx.com'
@@ -11337,7 +11331,6 @@ payload:
   - '+.blackdir.com'
   - '+.blackeep.com'
   - '+.blackh4t.org'
-  - '+.blackmailedslave.com'
   - '+.blackshark.com'
   - '+.blackshow.me'
   - '+.blackswancake.com'
@@ -12716,7 +12709,6 @@ payload:
   - '+.cchezhan.com'
   - '+.cchfound.org'
   - '+.cchicc.com'
-  - '+.cchongjing.com'
   - '+.cchorse.com'
   - '+.cchorse.net'
   - '+.ccian.com'
@@ -13258,7 +13250,6 @@ payload:
   - '+.cf69.com'
   - '+.cf865.com'
   - '+.cfachina.org'
-  - '+.cfanclub.net'
   - '+.cfbond.com'
   - '+.cfc365.com'
   - '+.cfca-c.org'
@@ -13272,7 +13263,6 @@ payload:
   - '+.cfda.pub'
   - '+.cfdp.org'
   - '+.cfdtlee.com'
-  - '+.cfeie.com'
   - '+.cfej.net'
   - '+.cfeks.com'
   - '+.cfgjwl.com'
@@ -13585,7 +13575,6 @@ payload:
   - '+.chayu.com'
   - '+.chayueshebao.com'
   - '+.chayuqing.com'
-  - '+.chazc.com'
   - '+.chazhaokan.com'
   - '+.chazhengla.com'
   - '+.chazhilan.com'
@@ -14757,7 +14746,6 @@ payload:
   - '+.chucaotang.net'
   - '+.chuchuguwen.com'
   - '+.chuchujie.com'
-  - '+.chudaoyou.com'
   - '+.chudeer.com'
   - '+.chudian365.com'
   - '+.chufaba.me'
@@ -14833,7 +14821,6 @@ payload:
   - '+.chuyouke.com'
   - '+.chuzhaobiao.com'
   - '+.chvv.com'
-  - '+.chw365.com'
   - '+.chwlsq.com'
   - '+.chxent.com'
   - '+.chxyq.com'
@@ -15296,7 +15283,6 @@ payload:
   - '+.cmsn.biz'
   - '+.cmspapp77.com'
   - '+.cmstop.com'
-  - '+.cmsyuanma.com'
   - '+.cmt178.com'
   - '+.cmt7.com'
   - '+.cmtdi.com'
@@ -17071,7 +17057,6 @@ payload:
   - '+.cysua.com'
   - '+.cytcard.com'
   - '+.cyts.com'
-  - '+.cytsgroup.com'
   - '+.cytsls.com'
   - '+.cytstibet.com'
   - '+.cyttc.org'
@@ -18370,7 +18355,6 @@ payload:
   - '+.didao.com'
   - '+.didapinche.com'
   - '+.didatravel.com'
-  - '+.didaxing.com'
   - '+.didialift.com'
   - '+.didiapp.com'
   - '+.didibear.com'
@@ -18439,7 +18423,6 @@ payload:
   - '+.dijingchao.com'
   - '+.dijiuban.com'
   - '+.dijunsm.com'
-  - '+.diketattoo.com'
   - '+.dili360.com'
   - '+.dili365.com'
   - '+.dililitv.com'
@@ -19977,7 +19960,6 @@ payload:
   - '+.easymule.com'
   - '+.easynet.vip'
   - '+.easypayx.com'
-  - '+.easypcmac.com'
   - '+.easyreadtech.com'
   - '+.easyrecovery.cc'
   - '+.easyrecovery.net'
@@ -21526,7 +21508,6 @@ payload:
   - '+.fastgz.com'
   - '+.fastidea.cc'
   - '+.fastidea.me'
-  - '+.fastio.tech'
   - '+.fastliii.com'
   - '+.fastmirror.org'
   - '+.fastmis.com'
@@ -24907,7 +24888,6 @@ payload:
   - '+.gzdata.net'
   - '+.gzdbx.com'
   - '+.gzdingyu.com'
-  - '+.gzdinuan.com'
   - '+.gzdsw.com'
   - '+.gzdysx.com'
   - '+.gzenxx.com'
@@ -26522,7 +26502,6 @@ payload:
   - '+.hgjx.com'
   - '+.hglaser.com'
   - '+.hgmai.com'
-  - '+.hgmhu.com'
   - '+.hgnc.net'
   - '+.hgvip804.com'
   - '+.hgy413.com'
@@ -27053,7 +27032,6 @@ payload:
   - '+.hntobacco.com'
   - '+.hntv.tv'
   - '+.hntvjiaotong.com'
-  - '+.hnweimeng.net'
   - '+.hnwisecom.com'
   - '+.hnwlcm.com'
   - '+.hnwlxh.net'
@@ -27061,7 +27039,6 @@ payload:
   - '+.hnwz8.com'
   - '+.hnxdf.com'
   - '+.hnxfpfb.com'
-  - '+.hnxgzg.com'
   - '+.hnxmxit.com'
   - '+.hnxttv.com'
   - '+.hnxuntang.com'
@@ -28359,7 +28336,6 @@ payload:
   - '+.hwanjia.com'
   - '+.hwasmart.com'
   - '+.hwbaoan.com'
-  - '+.hwbs.com'
   - '+.hwccpc.com'
   - '+.hwcloudlive.com'
   - '+.hwclouds-dns.com'
@@ -32796,7 +32772,6 @@ payload:
   - '+.juliacn.com'
   - '+.juliang8.com'
   - '+.juliangyinqing.com'
-  - '+.julianhd.net'
   - '+.julihun.com'
   - '+.julinghu.com'
   - '+.julive.com'
@@ -35175,7 +35150,6 @@ payload:
   - '+.leadal.net'
   - '+.leadbbs.com'
   - '+.leadcoretech.com'
-  - '+.leader-tech.net'
   - '+.leaderhero.com'
   - '+.leadge.com'
   - '+.leadong.com'
@@ -36301,7 +36275,6 @@ payload:
   - '+.ljbao.net'
   - '+.ljcdn.com'
   - '+.ljhis.com'
-  - '+.ljhks.net'
   - '+.ljia.com'
   - '+.ljia.net'
   - '+.ljimg.com'
@@ -36511,7 +36484,6 @@ payload:
   - '+.loli.wiki'
   - '+.loliloli.moe'
   - '+.loliloli.net'
-  - '+.lolip.net'
   - '+.lolitaf.com'
   - '+.lolitawardrobe.com'
   - '+.loliyun.vip'
@@ -36817,7 +36789,6 @@ payload:
   - '+.lslkkyj.com'
   - '+.lsnetlib.com'
   - '+.lsoos.com'
-  - '+.lspjy.com'
   - '+.lsqpay.com'
   - '+.lsrbs.net'
   - '+.lssen.com'
@@ -37991,7 +37962,6 @@ payload:
   - '+.medstarcorp.com'
   - '+.medtion.com'
   - '+.meechao.com'
-  - '+.meefon.com'
   - '+.meegoe.com'
   - '+.meeket.com'
   - '+.meet99.com'
@@ -40638,7 +40608,6 @@ payload:
   - '+.njcedu.com'
   - '+.njcgs.com'
   - '+.njcitygas.com'
-  - '+.njctkj.com'
   - '+.njcw.com'
   - '+.njd1.com'
   - '+.njdapaidang.com'
@@ -41810,6 +41779,7 @@ payload:
   - '+.owllook.net'
   - '+.owmy.ga'
   - '+.owner-api.teslamotors.com'
+  - '+.owoit.com'
   - '+.owomoe.net'
   - '+.owspace.com'
   - '+.owulia.com'
@@ -42530,7 +42500,6 @@ payload:
   - '+.piekee.com'
   - '+.piekee.net'
   - '+.pieshua.com'
-  - '+.piewan.com'
   - '+.pifa333.com'
   - '+.pifukezaixian.com'
   - '+.pig.ai'
@@ -44410,7 +44379,6 @@ payload:
   - '+.qqpao.com'
   - '+.qqpifu.com'
   - '+.qqppt.com'
-  - '+.qqpss.cc'
   - '+.qqq.tv'
   - '+.qqqiyemail.com'
   - '+.qqqnm.com'
@@ -44572,7 +44540,6 @@ payload:
   - '+.quanjiao.net'
   - '+.quanjing.com'
   - '+.quanjingke.com'
-  - '+.quanke8.com'
   - '+.quankexia.com'
   - '+.quanlaoda.com'
   - '+.quanlaodaonline.com'
@@ -45241,7 +45208,6 @@ payload:
   - '+.rencaiaaa.com'
   - '+.rencaijob.com'
   - '+.rendajingjiluntan.com'
-  - '+.rendease.com'
   - '+.rendefpc.com'
   - '+.renderbus.com'
   - '+.renderincloud.com'
@@ -45877,7 +45843,6 @@ payload:
   - '+.rvmcu.com'
   - '+.rwtext.com'
   - '+.rwxqfbj.com'
-  - '+.rwxwl.com'
   - '+.rxbj.com'
   - '+.rxdsj.com'
   - '+.rxgl.net'
@@ -47724,6 +47689,7 @@ payload:
   - '+.shuangzheng.org'
   - '+.shuanlongda.site'
   - '+.shuashuaapp.com'
+  - '+.shuax.com'
   - '+.shuazhibo.com'
   - '+.shubiaob.com'
   - '+.shubulo.com'
@@ -51560,7 +51526,6 @@ payload:
   - '+.tjdwkj.com'
   - '+.tjdyf.com'
   - '+.tjfer.com'
-  - '+.tjflora.com'
   - '+.tjgangkouyiyuan.com'
   - '+.tjgcs.com'
   - '+.tjgtgd.com'
@@ -54421,7 +54386,6 @@ payload:
   - '+.wandasportstravel.com'
   - '+.wandavista.com'
   - '+.wandhi.com'
-  - '+.wandianshenme.com'
   - '+.wanding.net'
   - '+.wandodo.com'
   - '+.wandoer.com'
@@ -57454,7 +57418,6 @@ payload:
   - '+.xht.com.hk'
   - '+.xhtd291.com'
   - '+.xhungame.com'
-  - '+.xhuojia.com'
   - '+.xhup.club'
   - '+.xhwhouse.com'
   - '+.xhxsw.com'
@@ -57590,7 +57553,6 @@ payload:
   - '+.xianniuzu.com'
   - '+.xiannvtu.com'
   - '+.xianpp.com'
-  - '+.xianqiao.wang'
   - '+.xianruan.com'
   - '+.xianshiqiba.com'
   - '+.xianshu.com'
@@ -59252,7 +59214,6 @@ payload:
   - '+.xunmeinet.com'
   - '+.xunmiweb.com'
   - '+.xunmzone.com'
-  - '+.xunqianwang.com'
   - '+.xunrenzhaoren.com'
   - '+.xunruicms.com'
   - '+.xunsearch.com'
@@ -59758,7 +59719,6 @@ payload:
   - '+.yanyijingling.com'
   - '+.yanyiwu.com'
   - '+.yanzhiwu.com'
-  - '+.yanzoujia.net'
   - '+.yao.com'
   - '+.yao123.com'
   - '+.yao51.com'
@@ -59805,7 +59765,6 @@ payload:
   - '+.yaoyuanba.com'
   - '+.yaozh.com'
   - '+.yaozs.com'
-  - '+.yaozui.com'
   - '+.yareiot.com'
   - '+.yarnn.com'
   - '+.yasishuo.com'
@@ -60050,7 +60009,6 @@ payload:
   - '+.yesdecor.com'
   - '+.yeseesports.com'
   - '+.yesense.com'
-  - '+.yeseread.com'
   - '+.yeshen.com'
   - '+.yeshengarts.com'
   - '+.yeshj.com'
@@ -60779,7 +60737,6 @@ payload:
   - '+.yj-fun.com'
   - '+.yj.ink'
   - '+.yj3g.com'
-  - '+.yj93zp.com'
   - '+.yjbys.com'
   - '+.yjcf360.com'
   - '+.yjcp.com'
@@ -60788,6 +60745,7 @@ payload:
   - '+.yjfs8.com'
   - '+.yjhyjl.com'
   - '+.yjihua.com'
+  - '+.yjk.com'
   - '+.yjk.im'
   - '+.yjldp.com'
   - '+.yjlin4.com'
@@ -62874,7 +62832,6 @@ payload:
   - '+.zghtedu.com'
   - '+.zghtqk.com'
   - '+.zgjcks.com'
-  - '+.zgjf168.com'
   - '+.zgjhjy.com'
   - '+.zgjiemeng.com'
   - '+.zgjjzyjy.org'
@@ -62945,7 +62902,6 @@ payload:
   - '+.zgswcn.com'
   - '+.zgsydw.com'
   - '+.zgsynews.com'
-  - '+.zgszrkdak.com'
   - '+.zgtghccl.com'
   - '+.zgtianqi.com'
   - '+.zgtjq.com'
