--- a/directbak.yaml
+++ b/directbak.yaml
@@ -406,6 +406,7 @@ payload:
   - '+.0575dsw.com'
   - '+.0575life.com'
   - '+.0575xf.com'
+  - '+.0576886.com'
   - '+.0576dsw.com'
   - '+.0577-it.com'
   - '+.0577cnw.com'
@@ -2087,6 +2088,7 @@ payload:
   - '+.21wmd.com'
   - '+.21ww.cc'
   - '+.21xc.com'
+  - '+.21xcx.com'
   - '+.21xianhua.com'
   - '+.21xl.info'
   - '+.21xuema.com'
@@ -2858,6 +2860,7 @@ payload:
   - '+.360kad.com'
   - '+.360kan.com'
   - '+.360kb.com'
+  - '+.360ksbd.com'
   - '+.360kuai.com'
   - '+.360kuaixue.com'
   - '+.360kxr.com'
@@ -3092,7 +3095,6 @@ payload:
   - '+.37yue.com'
   - '+.37yzy.com'
   - '+.37zone.com'
-  - '+.3800.cx'
   - '+.380852.com'
   - '+.380871.com'
   - '+.3817.com'
@@ -3421,7 +3423,6 @@ payload:
   - '+.42927bj.com'
   - '+.42927gz.com'
   - '+.42927xz.com'
-  - '+.42hq.com'
   - '+.42trip.com'
   - '+.42xz.com'
   - '+.4311.com'
@@ -3603,6 +3604,7 @@ payload:
   - '+.500cache.com'
   - '+.500d.me'
   - '+.500doc.com'
+  - '+.500fd.com'
   - '+.500gm.com'
   - '+.500px.me'
   - '+.500sucai.com'
@@ -3706,6 +3708,7 @@ payload:
   - '+.5173.com'
   - '+.5173cdn.com'
   - '+.517best.com'
+  - '+.517cdn.com'
   - '+.517ee.com'
   - '+.517hotel.com'
   - '+.517huizhou.com'
@@ -4534,6 +4537,7 @@ payload:
   - '+.52zhizuo.com'
   - '+.52zhushan.com'
   - '+.52zixue.com'
+  - '+.52zjkj.com'
   - '+.52zuji.net'
   - '+.52zx.cc'
   - '+.52zx.net'
@@ -5391,7 +5395,6 @@ payload:
   - '+.699pic.com'
   - '+.699xs.com'
   - '+.69cy.net'
-  - '+.69fenxiang.com'
   - '+.69hr.com'
   - '+.69jianzhi.com'
   - '+.69ps.com'
@@ -7674,7 +7677,6 @@ payload:
   - '+.ahhouse.com'
   - '+.ahhtzx.com'
   - '+.ahhwdp.com'
-  - '+.ahhxcm.com'
   - '+.ahjdq.com'
   - '+.ahjem.com'
   - '+.ahjgxy.com'
@@ -7793,6 +7795,7 @@ payload:
   - '+.aidimedia.com'
   - '+.aidingbuding.com'
   - '+.aidisida.com'
+  - '+.aidjyun.com'
   - '+.aidlearning.net'
   - '+.aidog.com'
   - '+.aidong.me'
@@ -7860,6 +7863,7 @@ payload:
   - '+.aiji66.com'
   - '+.aijianji.com'
   - '+.aijiatui.com'
+  - '+.aijiayou.com'
   - '+.aijigeci.com'
   - '+.aijikong.com'
   - '+.aijishu.com'
@@ -8019,7 +8023,6 @@ payload:
   - '+.aiwebsec.com'
   - '+.aiwei365.net'
   - '+.aiweibang.com'
-  - '+.aiweibk.com'
   - '+.aiweline.com'
   - '+.aiwen.cc'
   - '+.aiwenwo.net'
@@ -8495,6 +8498,7 @@ payload:
   - '+.analytics-china.com'
   - '+.analyticskey.com'
   - '+.anandoor.com'
+  - '+.anandzhang.com'
   - '+.ananzu.com'
   - '+.anatuprak.com'
   - '+.anav.com'
@@ -10050,6 +10054,7 @@ payload:
   - '+.baquge.tw'
   - '+.barmap.com'
   - '+.baron-bj.com'
+  - '+.baronzhang.com'
   - '+.barretlee.com'
   - '+.bartender.cc'
   - '+.base64.us'
@@ -10719,7 +10724,6 @@ payload:
   - '+.bigemao.com'
   - '+.bigeniao.com'
   - '+.bigerdata.com'
-  - '+.bigertech.com'
   - '+.bigeshuju.com'
   - '+.biggerlens.com'
   - '+.biggeryun.com'
@@ -12020,6 +12024,7 @@ payload:
   - '+.bwptl.com'
   - '+.bwpx.com'
   - '+.bwsoft.net'
+  - '+.bwton.com'
   - '+.bwxsj.com'
   - '+.bx1k.com'
   - '+.bx24k.com'
@@ -13424,7 +13429,6 @@ payload:
   - '+.chaishiguan.com'
   - '+.chaitin.com'
   - '+.chajiandaquan.com'
-  - '+.chajiaotong.com'
   - '+.chajie.com'
   - '+.chajn.org'
   - '+.chakahao.com'
@@ -14625,6 +14629,7 @@ payload:
   - '+.chnppmuseum.com'
   - '+.chnroad.com'
   - '+.chnsuv.com'
+  - '+.chocei.com'
   - '+.chocolatehappyland.com'
   - '+.chofn.com'
   - '+.chofn.net'
@@ -14698,6 +14703,7 @@ payload:
   - '+.chuangcache.com'
   - '+.chuangcdn.com'
   - '+.chuangchangnet.com'
+  - '+.chuangchenwangluo.com'
   - '+.chuangcifang.com'
   - '+.chuangd.com'
   - '+.chuangduyouyue.com'
@@ -16527,6 +16533,7 @@ payload:
   - '+.crec4.com'
   - '+.crec4mc.com'
   - '+.crecg.com'
+  - '+.crecohe.com'
   - '+.crecu.com'
   - '+.credibleglass.com'
   - '+.credit-cras.com'
@@ -16736,7 +16743,6 @@ payload:
   - '+.csvw.com'
   - '+.csw18.com'
   - '+.csweigou.com'
-  - '+.cswsadlab.com'
   - '+.csxcdj.com'
   - '+.csxdf.com'
   - '+.csxingfutemple.org'
@@ -16939,6 +16945,7 @@ payload:
   - '+.cwebgame.com'
   - '+.cwems.com'
   - '+.cwestc.com'
+  - '+.cwmcs.com'
   - '+.cwq.com'
   - '+.cwqu.com'
   - '+.cwroom.com'
@@ -17588,6 +17595,7 @@ payload:
   - '+.datadragon.net'
   - '+.dataesb.com'
   - '+.dataeye.com'
+  - '+.datafocus.ai'
   - '+.datagear.tech'
   - '+.datagrand.com'
   - '+.datahubtrack.com'
@@ -18335,6 +18343,7 @@ payload:
   - '+.diaoding.biz'
   - '+.diaojiang.com'
   - '+.diaokeji.net'
+  - '+.diaosaas.com'
   - '+.diaosi.net'
   - '+.diaosiweb.net'
   - '+.diaosu9.com'
@@ -18495,7 +18504,6 @@ payload:
   - '+.dinzd.com'
   - '+.dioenglish.com'
   - '+.dionly.com'
-  - '+.diougens.net'
   - '+.dious.cc'
   - '+.dipaispa.com'
   - '+.dipan.com'
@@ -20412,6 +20420,7 @@ payload:
   - '+.eickaopei.com'
   - '+.eicodesign.com'
   - '+.eicp.net'
+  - '+.eid-sft.com'
   - '+.eidlink.com'
   - '+.eigentech.ai'
   - '+.eigenvr.com'
@@ -23255,6 +23264,7 @@ payload:
   - '+.gdctsvisa.com'
   - '+.gdcx.net'
   - '+.gdcyl.org'
+  - '+.gdczyy.com'
   - '+.gddarf.com'
   - '+.gddata.net'
   - '+.gddcm.com'
@@ -25335,7 +25345,6 @@ payload:
   - '+.haizitong.com'
   - '+.haizol.com'
   - '+.hakaimg.com'
-  - '+.haku77.com'
   - '+.halade.com'
   - '+.halaha.com'
   - '+.halead.com'
@@ -27545,6 +27554,7 @@ payload:
   - '+.hsutimes.com'
   - '+.hsweb.me'
   - '+.hswkzy.com'
+  - '+.hswmb.com'
   - '+.hsxiang.com'
   - '+.hsxxad.com'
   - '+.hsybyh.com'
@@ -28190,7 +28200,6 @@ payload:
   - '+.huobanxietong.com'
   - '+.huobaowang.com'
   - '+.huobaoyx.com'
-  - '+.huobi.com.gi'
   - '+.huobi.io'
   - '+.huocai.com'
   - '+.huocc.com'
@@ -28316,6 +28325,7 @@ payload:
   - '+.huweishen.com'
   - '+.huxiaofan.com'
   - '+.huxiaoshi.com'
+  - '+.huxingroup.com'
   - '+.huxiu.com'
   - '+.huxiu.link'
   - '+.huxiucdn.com'
@@ -29577,6 +29587,7 @@ payload:
   - '+.ilidubj.net'
   - '+.ilife69.com'
   - '+.ilifesmart.com'
+  - '+.ilinekesy.com'
   - '+.ilingdai.com'
   - '+.ilinkee.com'
   - '+.ilinki.net'
@@ -30645,6 +30656,7 @@ payload:
   - '+.iwencai.com'
   - '+.iwenson.com'
   - '+.iwgame.com'
+  - '+.iwhalecloud.com'
   - '+.iwhgao.com'
   - '+.iwhr.com'
   - '+.iwin10.cc'
@@ -30927,6 +30939,7 @@ payload:
   - '+.jcloudlb.com'
   - '+.jcloudstatic.com'
   - '+.jclps.com'
+  - '+.jcmeitan.com'
   - '+.jcmob.net'
   - '+.jcmtxs.com'
   - '+.jcnano.com'
@@ -31702,6 +31715,7 @@ payload:
   - '+.jingpaidang.com'
   - '+.jingpinke.com'
   - '+.jingpt.com'
+  - '+.jingqizhitongche.com'
   - '+.jingrongshuan.com'
   - '+.jingruigroup.com'
   - '+.jingsh.com'
@@ -32421,6 +32435,7 @@ payload:
   - '+.jpegonline.com'
   - '+.jperation.com'
   - '+.jpg.cm'
+  - '+.jpghd.com'
   - '+.jphot.net'
   - '+.jpjc315.com'
   - '+.jpjww.com'
@@ -33063,6 +33078,7 @@ payload:
   - '+.jxunicom.com'
   - '+.jxw123.com'
   - '+.jxwmanage.com'
+  - '+.jxwmsj.com'
   - '+.jxwz.net'
   - '+.jxxdf.com'
   - '+.jxxfzx.com'
@@ -33130,6 +33146,7 @@ payload:
   - '+.jyuvip.com'
   - '+.jywstw.com'
   - '+.jyxdyzx.com'
+  - '+.jyxfzd.com'
   - '+.jyyun.com'
   - '+.jyz99.com'
   - '+.jyzysp.com'
@@ -33467,7 +33484,6 @@ payload:
   - '+.kaoruo.com'
   - '+.kaoshi110.net'
   - '+.kaoshi365.com'
-  - '+.kaoshib.com'
   - '+.kaoshibaike.com'
   - '+.kaoshibao.com'
   - '+.kaoshibb.com'
@@ -33840,6 +33856,7 @@ payload:
   - '+.kingkaid.com'
   - '+.kingland119.com'
   - '+.kinglandtech.net'
+  - '+.kingliton.com'
   - '+.kingnare.com'
   - '+.kingnet.com'
   - '+.kingnetdc.com'
@@ -34329,7 +34346,6 @@ payload:
   - '+.kuaichale.com'
   - '+.kuaidadi.com'
   - '+.kuaidaili.com'
-  - '+.kuaidajian.com'
   - '+.kuaidi.com'
   - '+.kuaidi100.com'
   - '+.kuaidihelp.com'
@@ -34439,6 +34455,7 @@ payload:
   - '+.kuashou.com'
   - '+.kubey.cc'
   - '+.kubikeji.com'
+  - '+.kuboluo.com'
   - '+.kuche.com'
   - '+.kuchuan.com'
   - '+.kudianqi.com'
@@ -34818,6 +34835,7 @@ payload:
   - '+.landi.com'
   - '+.landing-med.com'
   - '+.landingbj.com'
+  - '+.landintheair.com'
   - '+.landizs.com'
   - '+.landjs.com'
   - '+.landraco.com'
@@ -34878,6 +34896,7 @@ payload:
   - '+.lanjinger.com'
   - '+.lanjingfm.com'
   - '+.lanjingtmt.com'
+  - '+.lankecloud.com'
   - '+.lanlanlife.com'
   - '+.lanlicai.com'
   - '+.lanlv.com'
@@ -35220,7 +35239,6 @@ payload:
   - '+.lecoo.com'
   - '+.lecoo8.com'
   - '+.lecuntao.com'
-  - '+.leda13.com'
   - '+.ledanji.com'
   - '+.ledboke.com'
   - '+.ledcax.com'
@@ -36408,6 +36426,7 @@ payload:
   - '+.lnest.com'
   - '+.lnfw.net'
   - '+.lnfzb.com'
+  - '+.lngche.com'
   - '+.lngqt.com'
   - '+.lngwyw.com'
   - '+.lngxdz.com'
@@ -37092,6 +37111,7 @@ payload:
   - '+.lvwan365.com'
   - '+.lvwang.com'
   - '+.lvwenhan.com'
+  - '+.lvwmb.com'
   - '+.lvwo.com'
   - '+.lvxing.net'
   - '+.lvya.com'
@@ -37167,6 +37187,7 @@ payload:
   - '+.lxway.com'
   - '+.lxway.net'
   - '+.lxws.net'
+  - '+.lxx-inc.com'
   - '+.lxxm.com'
   - '+.lxy.me'
   - '+.lxybaike.com'
@@ -38340,6 +38361,7 @@ payload:
   - '+.mgenware.com'
   - '+.mgff.com'
   - '+.mgjianshe.com'
+  - '+.mgkj.vip'
   - '+.mgl9.com'
   - '+.mglip.com'
   - '+.mgogo.com'
@@ -38483,6 +38505,7 @@ payload:
   - '+.microlz.com'
   - '+.micromouse.tech'
   - '+.microrui.net'
+  - '+.microsoft-yuncdn.com'
   - '+.microstern.com'
   - '+.microvcard.com'
   - '+.microvirt.com'
@@ -38725,7 +38748,6 @@ payload:
   - '+.minixiazai.com'
   - '+.miniyounger.com'
   - '+.minor-tech.com'
-  - '+.minqingguancha.com'
   - '+.minra.com'
   - '+.minrank.com'
   - '+.minretail.com'
@@ -38933,7 +38955,6 @@ payload:
   - '+.mmmiao.com'
   - '+.mmmmmmm.com'
   - '+.mmmtech.com'
-  - '+.mmonly.cc'
   - '+.mmosite.com'
   - '+.mmscoo.com'
   - '+.mmsfw.com'
@@ -39035,6 +39056,7 @@ payload:
   - '+.modao.cc'
   - '+.modao.com'
   - '+.modao.io'
+  - '+.modb.cc'
   - '+.modb.pro'
   - '+.modeng178.com'
   - '+.modernsky.com'
@@ -40061,6 +40083,7 @@ payload:
   - '+.nasgetinfo.com'
   - '+.nashwork.com'
   - '+.nasimobi.com'
+  - '+.nasinet.com'
   - '+.nasiosoft.com'
   - '+.nasyun.com'
   - '+.nat123.com'
@@ -40519,7 +40542,6 @@ payload:
   - '+.nihaodd.com'
   - '+.nihaotw.com'
   - '+.nihaowang.com'
-  - '+.nihontu-cn.com'
   - '+.nihuwo.net'
   - '+.niiceda.com'
   - '+.niiwoo.com'
@@ -41864,6 +41886,7 @@ payload:
   - '+.p5w.net'
   - '+.p8games.com'
   - '+.p99998888.com'
+  - '+.pa.ci'
   - '+.pa18.com'
   - '+.pa1pa.com'
   - '+.paahu.com'
@@ -42489,7 +42512,6 @@ payload:
   - '+.piaode.ren'
   - '+.piaodown.com'
   - '+.piaohua.com'
-  - '+.piaohuafl.com'
   - '+.piaojubao.com'
   - '+.piaoliang.com'
   - '+.piaoliusan.com'
@@ -42557,6 +42579,7 @@ payload:
   - '+.pimei.com'
   - '+.pin-color.net'
   - '+.pin-qu.com'
+  - '+.pin0312.com'
   - '+.pin18pin.com'
   - '+.pin2eat.com'
   - '+.pin5i.com'
@@ -42639,7 +42662,6 @@ payload:
   - '+.pinpaiv.com'
   - '+.pinqugongxiangktv.com'
   - '+.pinshan.com'
-  - '+.pinshiwen.com'
   - '+.pinshu.com'
   - '+.pinsilianzu1.com'
   - '+.pinsilianzu3.com'
@@ -43377,7 +43399,6 @@ payload:
   - '+.qb5200.tw'
   - '+.qbangmang.com'
   - '+.qbao.com'
-  - '+.qbaobei.com'
   - '+.qbaoting.com'
   - '+.qbb6.com'
   - '+.qbdcc.com'
@@ -43779,7 +43800,6 @@ payload:
   - '+.qicaispace.com'
   - '+.qicaitechan.com'
   - '+.qicaixianhua.com'
-  - '+.qicaizz.com'
   - '+.qichacha.co'
   - '+.qichacha.com'
   - '+.qichacha.net'
@@ -44162,7 +44182,6 @@ payload:
   - '+.qiye163.com'
   - '+.qiye8848.com'
   - '+.qiyegongqiu.com'
-  - '+.qiyegongqiu.net'
   - '+.qiyeku.com'
   - '+.qiyenet.net'
   - '+.qiyeshangpu.com'
@@ -44499,6 +44518,7 @@ payload:
   - '+.qshang.com'
   - '+.qsixi.com'
   - '+.qskretkf.com'
+  - '+.qsmis.com'
   - '+.qspfw.com'
   - '+.qspfwadmin.com'
   - '+.qss-lb.com'
@@ -45295,6 +45315,7 @@ payload:
   - '+.renwuyi.com'
   - '+.renxingwang.com'
   - '+.renyaohua.com'
+  - '+.renyiwei.com'
   - '+.renyufei.com'
   - '+.renzha.net'
   - '+.reocar.com'
@@ -45452,6 +45473,7 @@ payload:
   - '+.rizhuji.com'
   - '+.rizhuti.com'
   - '+.rj-bai.com'
+  - '+.rj.link'
   - '+.rj889.net'
   - '+.rjdk.org'
   - '+.rjghome.com'
@@ -45918,6 +45940,7 @@ payload:
   - '+.rzok.net'
   - '+.rzszp.com'
   - '+.rzx.me'
+  - '+.rzzyfw.com'
   - '+.s-02.com'
   - '+.s-dom.net'
   - '+.s-ns.com'
@@ -46469,6 +46492,7 @@ payload:
   - '+.sdsmefina.com'
   - '+.sdsszt.com'
   - '+.sdtdata.com'
+  - '+.sdtrxx.com'
   - '+.sdtsrf.com'
   - '+.sdtvjiankang.com'
   - '+.sdtxmq.com'
@@ -48208,6 +48232,7 @@ payload:
   - '+.sinsam.com'
   - '+.sintaytour.com'
   - '+.sintu.com'
+  - '+.sinture.com'
   - '+.sinvofund.com'
   - '+.sinvta.com'
   - '+.sinyuee.com'
@@ -48278,6 +48303,7 @@ payload:
   - '+.sizeofvoid.net'
   - '+.sizuo.com'
   - '+.sj-lawyer.com'
+  - '+.sj0763.com'
   - '+.sj11hb.com'
   - '+.sj123.com'
   - '+.sj33.net'
@@ -48476,7 +48502,6 @@ payload:
   - '+.sltg2019.com'
   - '+.sltv.net'
   - '+.slupdate.dlservice.microsoft.com'
-  - '+.slvdy.com'
   - '+.slwh-dfh.com'
   - '+.slwwedding.com'
   - '+.slzsxx.com'
@@ -50017,6 +50042,7 @@ payload:
   - '+.syr-sce.com'
   - '+.syrcb.net'
   - '+.syrecovery.com'
+  - '+.syrhkj.com'
   - '+.sys-ele.com'
   - '+.syscan360.org'
   - '+.sysceo.com'
@@ -50027,6 +50053,7 @@ payload:
   - '+.sysfans.com'
   - '+.syshospital.com'
   - '+.syshospital.org'
+  - '+.sysjnl.com'
   - '+.sysmini.com'
   - '+.sysmk120.com'
   - '+.sysnlt.com'
@@ -50891,6 +50918,7 @@ payload:
   - '+.technode.com'
   - '+.techoke.com'
   - '+.techonegame.com'
+  - '+.techqianmo.com'
   - '+.techsir.com'
   - '+.techtmt.com'
   - '+.techuangyi.com'
@@ -51789,6 +51817,7 @@ payload:
   - '+.tongcaihulian.com'
   - '+.tongchaba.com'
   - '+.tongcheng.cc'
+  - '+.tongchengqun.vip'
   - '+.tongchouba.com'
   - '+.tongda2000.com'
   - '+.tongdaohui.com'
@@ -52574,6 +52603,7 @@ payload:
   - '+.tushu007.com'
   - '+.tushuguan.cc'
   - '+.tushumi.com'
+  - '+.tushuokeji.net'
   - '+.tushupdf.com'
   - '+.tusij.com'
   - '+.tusiot.com'
@@ -53896,7 +53926,6 @@ payload:
   - '+.vipchina.com'
   - '+.vipcn.com'
   - '+.vipcto.com'
-  - '+.vipdage.com'
   - '+.vipersaudio.com'
   - '+.vipfengfei.com'
   - '+.vipfengxiao.com'
@@ -54331,7 +54360,6 @@ payload:
   - '+.waduanzi.com'
   - '+.waerfa.com'
   - '+.waf.cdnetworks.com'
-  - '+.waf.cx'
   - '+.wafcn.com'
   - '+.wafunny.com'
   - '+.waheaven.com'
@@ -54933,6 +54961,7 @@ payload:
   - '+.weeiy.com'
   - '+.weekus.com'
   - '+.weelv.com'
+  - '+.weemall.shop'
   - '+.weeqoo.com'
   - '+.weeyun.com'
   - '+.wefans.com'
@@ -55259,6 +55288,7 @@ payload:
   - '+.wenfangnet.com'
   - '+.wenfatang.net'
   - '+.wengbi.com'
+  - '+.wengegroup.com'
   - '+.wengkui.com'
   - '+.wenguang.com'
   - '+.wenguangta.com'
@@ -55507,6 +55537,7 @@ payload:
   - '+.whcrewin.com'
   - '+.whcst.com'
   - '+.whctv.com'
+  - '+.whcx365.com'
   - '+.whcyit.com'
   - '+.whdaring.com'
   - '+.whdayy.com'
@@ -56091,6 +56122,7 @@ payload:
   - '+.wmcn.com'
   - '+.wmedias.com'
   - '+.wmiao.com'
+  - '+.wming.com'
   - '+.wmiyx.com'
   - '+.wmjk.net'
   - '+.wmjrc.com'
@@ -56216,6 +56248,7 @@ payload:
   - '+.wojiaoni.com'
   - '+.wojilu.com'
   - '+.wok.com'
+  - '+.wokaola.com'
   - '+.wokeji.com'
   - '+.woko.cc'
   - '+.wolai.com'
@@ -56263,6 +56296,7 @@ payload:
   - '+.wonderstar027.com'
   - '+.wonderyouxi.com'
   - '+.wonei.com'
+  - '+.wonengxing588.com'
   - '+.wonerqu.com'
   - '+.wongcw.com'
   - '+.wonggang.com'
@@ -56893,6 +56927,7 @@ payload:
   - '+.wxiat.com'
   - '+.wxjx123.com'
   - '+.wxkj666.com'
+  - '+.wxkjwlw.com'
   - '+.wxkol.com'
   - '+.wxlagame.com'
   - '+.wxlongre.com'
@@ -57680,6 +57715,7 @@ payload:
   - '+.xiaodianweb.com'
   - '+.xiaodigu.com'
   - '+.xiaodigufz.com'
+  - '+.xiaoding110.com'
   - '+.xiaodongrui.com'
   - '+.xiaodongxier.com'
   - '+.xiaodoubi.com'
@@ -57741,6 +57777,7 @@ payload:
   - '+.xiaojukeji.com'
   - '+.xiaojun.org'
   - '+.xiaoka.tv'
+  - '+.xiaokakj.com'
   - '+.xiaokanba.com'
   - '+.xiaokanglongjiang.com'
   - '+.xiaokao.com'
@@ -58196,6 +58233,7 @@ payload:
   - '+.xingkuad.com'
   - '+.xinglai.com'
   - '+.xinglinpukang.com'
+  - '+.xinglongdayuan.com'
   - '+.xingmai58.com'
   - '+.xingmao.cc'
   - '+.xingmima.com'
@@ -58238,6 +58276,7 @@ payload:
   - '+.xingyuyouxi.com'
   - '+.xingzhang.com'
   - '+.xingzhige.com'
+  - '+.xingzhilan.com'
   - '+.xingzhilian.net'
   - '+.xingzhiyue.com'
   - '+.xingzuo.com'
@@ -58422,6 +58461,7 @@ payload:
   - '+.xinzheng.cc'
   - '+.xinzhenkj.com'
   - '+.xinzhi.space'
+  - '+.xionganxinxi.com'
   - '+.xionganzhuce.com'
   - '+.xiongdayq.com'
   - '+.xiongdong.com'
@@ -58929,6 +58969,7 @@ payload:
   - '+.xqtesting.com'
   - '+.xqwggg.com'
   - '+.xqwww.com'
+  - '+.xqyk024.com'
   - '+.xrcch.com'
   - '+.xrccp.com'
   - '+.xreacloud.com'
@@ -58958,6 +58999,7 @@ payload:
   - '+.xsbnggzyjyxx.com'
   - '+.xscbs.com'
   - '+.xschu.com'
+  - '+.xsdma.com'
   - '+.xsdwk.com'
   - '+.xsdwmsj.com'
   - '+.xsee.cc'
@@ -59674,6 +59716,7 @@ payload:
   - '+.yanghui.com'
   - '+.yangjian.me'
   - '+.yangjie.li'
+  - '+.yangjisen.com'
   - '+.yangkatie.com'
   - '+.yangkeduo.com'
   - '+.yangki.net'
@@ -59723,7 +59766,6 @@ payload:
   - '+.yangyq.net'
   - '+.yangzhe1991.org'
   - '+.yangzhiping.com'
-  - '+.yangzhiriji.com'
   - '+.yangzhix.com'
   - '+.yangzhongchao.com'
   - '+.yangzijiang.com'
@@ -59812,6 +59854,7 @@ payload:
   - '+.yaopinnet.com'
   - '+.yaoqingwo.com'
   - '+.yaosai.com'
+  - '+.yaotia.com'
   - '+.yaowan.com'
   - '+.yaowei.info'
   - '+.yaoxianwu.com'
@@ -59922,6 +59965,7 @@ payload:
   - '+.ycpai.com'
   - '+.ycrh-tattoo.com'
   - '+.ycrusher.com'
+  - '+.ycsd.work'
   - '+.ycsrc.com'
   - '+.ycsystem.com'
   - '+.yct-tec.com'
@@ -60378,6 +60422,7 @@ payload:
   - '+.yikedou.com'
   - '+.yikehome.com'
   - '+.yiketalks.com'
+  - '+.yiketianqi.com'
   - '+.yikeweiqi.com'
   - '+.yikexue.com'
   - '+.yikeyz.com'
@@ -60909,6 +60954,7 @@ payload:
   - '+.ymars.com'
   - '+.ymatou.com'
   - '+.ymatou.hk'
+  - '+.ymbaidu.com'
   - '+.ymbq301.com'
   - '+.ymcall.com'
   - '+.ymcart.com'
@@ -61165,6 +61211,7 @@ payload:
   - '+.youdaolvshi.com'
   - '+.youdas.com'
   - '+.youdashidai.com'
+  - '+.youdawangluo.com'
   - '+.youdemai.com'
   - '+.youdiancms.com'
   - '+.youdingte.com'
@@ -61230,6 +61277,7 @@ payload:
   - '+.youlanw.com'
   - '+.youle55.com'
   - '+.youleliwu.com'
+  - '+.youliaobaike.com'
   - '+.youlinyouke.com'
   - '+.youlishipin.com'
   - '+.youloft.com'
@@ -61403,6 +61451,7 @@ payload:
   - '+.youyilm.com'
   - '+.youyiqi.com'
   - '+.youyiqiaogou.com'
+  - '+.youyiweizhan.com'
   - '+.youyizhidao.com'
   - '+.youyo88.com'
   - '+.youyou234.com'
@@ -61597,6 +61646,7 @@ payload:
   - '+.ysx8.net'
   - '+.ysx8.vip'
   - '+.ysx9999.com'
+  - '+.ysxapp.com'
   - '+.ysxs8.com'
   - '+.ysyycv.com'
   - '+.yszx99.com'
@@ -62310,6 +62360,7 @@ payload:
   - '+.yxkjlcd.com'
   - '+.yxlady.com'
   - '+.yxlady.net'
+  - '+.yxle.net'
   - '+.yxlink.com'
   - '+.yxlmdl.net'
   - '+.yxm.com'
@@ -63387,7 +63438,6 @@ payload:
   - '+.zhidian3g.com'
   - '+.zhidieyun.com'
   - '+.zhiding0603.com'
-  - '+.zhidiy.com'
   - '+.zhidj.com'
   - '+.zhidmai.com'
   - '+.zhiduopc.com'
@@ -63544,6 +63594,7 @@ payload:
   - '+.zhiyoubao.com'
   - '+.zhiyousx.com'
   - '+.zhiyuanit.com'
+  - '+.zhiyuanxingxiang.com'
   - '+.zhiyuanyun.com'
   - '+.zhiyuanzhongyi.com'
   - '+.zhiyujit.com'
@@ -63630,7 +63681,6 @@ payload:
   - '+.zhongguomap.com'
   - '+.zhongguopeixun.net'
   - '+.zhongguose.com'
-  - '+.zhongguoseo.net'
   - '+.zhongguoshici.com'
   - '+.zhongguosou.com'
   - '+.zhongguowangshi.com'
