--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2448,7 +2448,6 @@ payload:
   - '+.2j88.com'
   - '+.2jianli.com'
   - '+.2k2k.com'
-  - '+.2kandy.com'
   - '+.2kb.com'
   - '+.2ktq.com'
   - '+.2ktvb.com'
@@ -3792,7 +3791,6 @@ payload:
   - '+.51changmi.com'
   - '+.51changxie.com'
   - '+.51chaoban.com'
-  - '+.51checai.com'
   - '+.51chongdian.net'
   - '+.51chost.com'
   - '+.51chuguo.org'
@@ -4061,7 +4059,6 @@ payload:
   - '+.51rc.com'
   - '+.51rcsl.com'
   - '+.51read.site'
-  - '+.51reboot.com'
   - '+.51rencai.com'
   - '+.51render.com'
   - '+.51renpin.com'
@@ -5882,7 +5879,6 @@ payload:
   - '+.7xdown.com'
   - '+.7xfilm.com'
   - '+.7y5.net'
-  - '+.7y7.com'
   - '+.7yc.com'
   - '+.7youxi.com'
   - '+.7yue.pro'
@@ -6306,6 +6302,7 @@ payload:
   - '+.8hsleep.com'
   - '+.8jdns.net'
   - '+.8jiaoye.com'
+  - '+.8jie8.com'
   - '+.8jj.cc'
   - '+.8jxn.com'
   - '+.8jzw.cc'
@@ -7261,6 +7258,7 @@ payload:
   - '+.abctang.com'
   - '+.abcve.com'
   - '+.abcxs.com'
+  - '+.abcxyzkk.xyz'
   - '+.abcydia.com'
   - '+.abd007.com'
   - '+.abdstem.com'
@@ -9258,7 +9256,6 @@ payload:
   - '+.atianqi.com'
   - '+.atido.com'
   - '+.ating.info'
-  - '+.atitsc.com'
   - '+.atiyun.com'
   - '+.atjiang.com'
   - '+.atmbox.com'
@@ -10084,7 +10081,6 @@ payload:
   - '+.bavei.com'
   - '+.bawagon.com'
   - '+.bawanglongbengye.com'
-  - '+.baxi.tv'
   - '+.baxiami.com'
   - '+.baxichina.com'
   - '+.baybox.club'
@@ -14754,6 +14750,7 @@ payload:
   - '+.chuanying520.com'
   - '+.chuanyinpx.com'
   - '+.chuapp.com'
+  - '+.chuban.cc'
   - '+.chubaodai.com'
   - '+.chubh.com'
   - '+.chucaotang.com'
@@ -15680,7 +15677,6 @@ payload:
   - '+.cnlive.com'
   - '+.cnliveimg.com'
   - '+.cnllz.com'
-  - '+.cnlty.com'
   - '+.cnmanhua.com'
   - '+.cnmattson.com'
   - '+.cnmb.win'
@@ -16884,6 +16880,7 @@ payload:
   - '+.cuiuc.com'
   - '+.cuiweijuxing.com'
   - '+.cuiyongjian.com'
+  - '+.cujs.com'
   - '+.cuketest.com'
   - '+.cul-studies.com'
   - '+.culaiwan.com'
@@ -17002,7 +16999,6 @@ payload:
   - '+.cxzg.com'
   - '+.cxzudwk.com'
   - '+.cxzw.com'
-  - '+.cxzww.com'
   - '+.cy-cdn.com'
   - '+.cy-email.com'
   - '+.cy.com'
@@ -18101,6 +18097,7 @@ payload:
   - '+.dfhtjn.com'
   - '+.dfkcgs.com'
   - '+.dfkhgj.com'
+  - '+.dfkj.cc'
   - '+.dfmc.com'
   - '+.dfmcastrol.com'
   - '+.dfmingya.com'
@@ -20602,6 +20599,7 @@ payload:
   - '+.emuia.com'
   - '+.emulatedlab.com'
   - '+.emumax.com'
+  - '+.emupic.com'
   - '+.emushroom.net'
   - '+.emwan.com'
   - '+.emyard.com'
@@ -22782,6 +22780,7 @@ payload:
   - '+.fxdp.com'
   - '+.fxian.org'
   - '+.fxiaoke.com'
+  - '+.fxl1950.com'
   - '+.fxlbb.com'
   - '+.fxltsbl.com'
   - '+.fxm.so'
@@ -25682,6 +25681,7 @@ payload:
   - '+.haowu.info'
   - '+.haowu.link'
   - '+.haowui.com'
+  - '+.haowusong.com'
   - '+.haowuyunji.com'
   - '+.haowuyx.com'
   - '+.haoxg.net'
@@ -27362,7 +27362,6 @@ payload:
   - '+.howjoin.com'
   - '+.hownav.com'
   - '+.howsci.com'
-  - '+.howsoftworks.net'
   - '+.howtoing.com'
   - '+.howzhi.com'
   - '+.hoxing.com'
@@ -27596,6 +27595,7 @@ payload:
   - '+.htgjjl.com'
   - '+.htguosheng.com'
   - '+.htgwf.com'
+  - '+.hthdo.com'
   - '+.hthl.net'
   - '+.htidc.com'
   - '+.htinfor.com'
@@ -29288,7 +29288,6 @@ payload:
   - '+.ifengweekly.com'
   - '+.ifengwoo.com'
   - '+.ifensi.com'
-  - '+.ifenso.net'
   - '+.ifenxi.com'
   - '+.ifere.com'
   - '+.ifeve.com'
@@ -33599,7 +33598,6 @@ payload:
   - '+.keda.com'
   - '+.kedang.net'
   - '+.keddoo.com'
-  - '+.kede.com.hk'
   - '+.kede.com'
   - '+.kedi.cc'
   - '+.kedou.com'
@@ -36249,7 +36247,6 @@ payload:
   - '+.livesone.net'
   - '+.livesupport24x7.com'
   - '+.liveuc.net'
-  - '+.liveupdate01.asus.com'
   - '+.livevideostack.com'
   - '+.livinglabs.cc'
   - '+.livku.com'
@@ -37358,6 +37355,7 @@ payload:
   - '+.macapp8.com'
   - '+.macappbox.com'
   - '+.macappx.com'
+  - '+.macat.vip'
   - '+.macauinternationalclubbingshow.com'
   - '+.macaumonthly.net'
   - '+.maccura.com'
@@ -38561,6 +38559,7 @@ payload:
   - '+.migroom.com'
   - '+.migucloud.com'
   - '+.migufun.com'
+  - '+.migugu.com'
   - '+.migutv.com'
   - '+.miguvideo.com'
   - '+.miguyu.com'
@@ -40741,7 +40740,6 @@ payload:
   - '+.nmgyjszx.com'
   - '+.nmgyljs.com'
   - '+.nmhfw.com'
-  - '+.nmhrjy.com'
   - '+.nmimi.com'
   - '+.nmkjxy.com'
   - '+.nmmwz.com'
@@ -42021,7 +42019,6 @@ payload:
   - '+.panshianquan.com'
   - '+.panshixk.com'
   - '+.panshiyun.com'
-  - '+.panshizz.com'
   - '+.panshy.com'
   - '+.pansino-solutions.com'
   - '+.pansj.cc'
@@ -42699,7 +42696,6 @@ payload:
   - '+.piqs.com'
   - '+.piscesys.com'
   - '+.pisx.com'
-  - '+.pites.cc'
   - '+.piworker.com'
   - '+.pixelauth.com'
   - '+.pixhey.com'
@@ -43032,7 +43028,6 @@ payload:
   - '+.ppmake.com'
   - '+.ppmm.org'
   - '+.ppmoney.com'
-  - '+.ppmoney.net'
   - '+.ppnames.com'
   - '+.pppet.net'
   - '+.pppie.com'
@@ -43152,6 +43147,7 @@ payload:
   - '+.proya.com'
   - '+.proyy.com'
   - '+.prts.wiki'
+  - '+.prxxff.com'
   - '+.przhushou.com'
   - '+.przwt.com'
   - '+.ps123.net'
@@ -43646,6 +43642,7 @@ payload:
   - '+.qhsxf.net'
   - '+.qhtibetan.com'
   - '+.qhtycp.com'
+  - '+.qhtyzx.com'
   - '+.qhupdate.com'
   - '+.qhwh.com'
   - '+.qhwmw.com'
@@ -45034,7 +45031,6 @@ payload:
   - '+.ranwen.tv'
   - '+.ranwen.tw'
   - '+.ranwena.com'
-  - '+.ranwena.net'
   - '+.ranwenzw.com'
   - '+.ranyi.net'
   - '+.ranzhi.net'
@@ -45961,7 +45957,6 @@ payload:
   - '+.s60sky.com'
   - '+.s72c.com'
   - '+.s8dj.com'
-  - '+.s8j.com'
   - '+.s8x1.com'
   - '+.s8xs.com'
   - '+.s936.com'
@@ -46523,6 +46518,7 @@ payload:
   - '+.sdzdmjg.com'
   - '+.sdzhidian.com'
   - '+.sdzk.co'
+  - '+.sdzs.com'
   - '+.sdzxswhjygjlm.com'
   - '+.se77en.cc'
   - '+.sea-group.org'
@@ -47274,7 +47270,6 @@ payload:
   - '+.shenyangoffice.com'
   - '+.shenyecg.com'
   - '+.shenyehd.com'
-  - '+.shenyequ.com'
   - '+.shenyou.tv'
   - '+.shenyunlaw.com'
   - '+.shenzan.com'
@@ -47691,7 +47686,6 @@ payload:
   - '+.shsipo.com'
   - '+.shsixun.com'
   - '+.shsjb.com'
-  - '+.shskapp.com'
   - '+.shskin.com'
   - '+.shsot.com'
   - '+.shspark.com'
@@ -48074,7 +48068,6 @@ payload:
   - '+.siludao.com'
   - '+.siluecai.com'
   - '+.siluke.cc'
-  - '+.siluke.com'
   - '+.siluke.tw'
   - '+.silukeke.com'
   - '+.silusheji.com'
@@ -49588,7 +49581,6 @@ payload:
   - '+.sumavision.com'
   - '+.sumeme.com'
   - '+.sumgotea.com'
-  - '+.sumiaowang.com'
   - '+.suming.in'
   - '+.sumly.net'
   - '+.summall.com'
@@ -49599,6 +49591,7 @@ payload:
   - '+.sumscope.com'
   - '+.sumsz.com'
   - '+.sumygg.com'
+  - '+.sumzc.com'
   - '+.sun-ada.net'
   - '+.sun-lion.com'
   - '+.sun-wish.com'
@@ -51841,9 +51834,9 @@ payload:
   - '+.tongliangrc.com'
   - '+.tongliaowang.com'
   - '+.tonglu-tour.com'
-  - '+.tongluyizhao.com'
   - '+.tongmengguo.com'
   - '+.tongshanbank.com'
+  - '+.tongshilu.com'
   - '+.tongshuai.com'
   - '+.tongtaiamc.com'
   - '+.tongtech.com'
@@ -55866,7 +55859,6 @@ payload:
   - '+.win7999.com'
   - '+.win7china.com'
   - '+.win7en.com'
-  - '+.win7i.com'
   - '+.win7qijian.com'
   - '+.win7qjb.com'
   - '+.win7sky.com'
@@ -56497,6 +56489,7 @@ payload:
   - '+.wrjzj.com'
   - '+.wrkdih.com'
   - '+.wrl163.com'
+  - '+.wrlsw.com'
   - '+.wrltxt.com'
   - '+.wrmjk.com'
   - '+.wrsa.net'
@@ -56745,6 +56738,7 @@ payload:
   - '+.wushang.com'
   - '+.wushangplaza.com'
   - '+.wushen.com'
+  - '+.wushifublog.com'
   - '+.wushuangol.com'
   - '+.wushuangtech.com'
   - '+.wushuhenan.com'
@@ -62557,7 +62551,6 @@ payload:
   - '+.z316.com'
   - '+.z3quant.com'
   - '+.z4bbs.com'
-  - '+.z4m3.com'
   - '+.z5a.com'
   - '+.z5encrypt.com'
   - '+.z5z4.com'
