--- a/directbak.yaml
+++ b/directbak.yaml
@@ -4935,7 +4935,6 @@ payload:
   - '+.5h.com'
   - '+.5ha.net'
   - '+.5hanjutv.com'
-  - '+.5hao21.com'
   - '+.5hb.org'
   - '+.5hrc.com'
   - '+.5hte21mz.com'
@@ -5755,7 +5754,6 @@ payload:
   - '+.79tui.com'
   - '+.79yougame.com'
   - '+.79yx.com'
-  - '+.79yx.net'
   - '+.7a31jmf.com'
   - '+.7a8k.com'
   - '+.7acg.com'
@@ -6987,6 +6985,7 @@ payload:
   - '+.99hdf.com'
   - '+.99hkjf.com'
   - '+.99huizhou.com'
+  - '+.99huodong.xyz'
   - '+.99ielts.com'
   - '+.99inn.cc'
   - '+.99jianzhu.com'
@@ -8046,7 +8045,6 @@ payload:
   - '+.aixyz.com'
   - '+.aixzu.com'
   - '+.aiyaapp.com'
-  - '+.aiyadu.com'
   - '+.aiyangedu.com'
   - '+.aiyanqing.com'
   - '+.aiyaopai.com'
@@ -8795,7 +8793,6 @@ payload:
   - '+.aosoo.com'
   - '+.aoswtc.com'
   - '+.aotian.com'
-  - '+.aotocn.com'
   - '+.aotrip.net'
   - '+.aotuzuche.com'
   - '+.aowei.com'
@@ -9344,7 +9341,6 @@ payload:
   - '+.autojkd.com'
   - '+.autojs.org'
   - '+.autonavi.com'
-  - '+.autono1.com'
   - '+.autoparts-yoto.com'
   - '+.autophagy.net'
   - '+.autoplansearch.com'
@@ -9466,7 +9462,6 @@ payload:
   - '+.ayux.net'
   - '+.ayxbk.com'
   - '+.ayxz.com'
-  - '+.azber.com'
   - '+.azbingxin.com'
   - '+.azchcdna.com'
   - '+.azchcdnb.com'
@@ -10035,7 +10030,6 @@ payload:
   - '+.baozou.com'
   - '+.baozoudi.com'
   - '+.baozoumanhua.com'
-  - '+.baozouribao.com'
   - '+.baozy.com'
   - '+.baping.com'
   - '+.baqima.com'
@@ -10207,6 +10201,7 @@ payload:
   - '+.bctmo.com'
   - '+.bcty365.com'
   - '+.bcvbw.com'
+  - '+.bcwangluo.net'
   - '+.bcweibo.com'
   - '+.bcwhy.com'
   - '+.bcwxfy.com'
@@ -11107,7 +11102,6 @@ payload:
   - '+.bjfsali.com'
   - '+.bjfwbz.org'
   - '+.bjfyw.org'
-  - '+.bjg.ink'
   - '+.bjgas.com'
   - '+.bjgemi.com'
   - '+.bjggk.com'
@@ -11860,6 +11854,7 @@ payload:
   - '+.btorange.com'
   - '+.btpig.com'
   - '+.btplay.net'
+  - '+.btqsam.com'
   - '+.btrcsc.com'
   - '+.btsabc.org'
   - '+.btschool.net'
@@ -13919,6 +13914,7 @@ payload:
   - '+.china-reform.org'
   - '+.china-ric.com'
   - '+.china-riscv.com'
+  - '+.china-rty.com'
   - '+.china-russia.org'
   - '+.china-see.com'
   - '+.china-seeq.com'
@@ -15148,6 +15144,7 @@ payload:
   - '+.clouddcs.com'
   - '+.clouddiffuse.xyz'
   - '+.clouddn.com'
+  - '+.clouddns.vip'
   - '+.clouddream.net'
   - '+.cloudgap.net'
   - '+.cloudgfw.com'
@@ -15842,7 +15839,6 @@ payload:
   - '+.cnvcs.com'
   - '+.cnvf.com'
   - '+.cnvps.com'
-  - '+.cnvr-expo.com'
   - '+.cnwa.com'
   - '+.cnwaking.com'
   - '+.cnwaternews.com'
@@ -18537,6 +18533,7 @@ payload:
   - '+.diugai.com'
   - '+.div.io'
   - '+.divcss5.com'
+  - '+.divetgallery.com'
   - '+.diwenganzaoji.com'
   - '+.diwork.com'
   - '+.dixintong.com'
@@ -20100,7 +20097,6 @@ payload:
   - '+.ecmoban.com'
   - '+.ecnudec.com'
   - '+.ecoalchina.com'
-  - '+.ecochuse.com'
   - '+.ecocn.org'
   - '+.ecombdapi.com'
   - '+.ecombdimg.com'
@@ -20882,7 +20878,6 @@ payload:
   - '+.eteste.com'
   - '+.etf.group'
   - '+.etf88.com'
-  - '+.eth6.org'
   - '+.ethainan.com'
   - '+.ethan.pub'
   - '+.ethercap.com'
@@ -29044,7 +29039,6 @@ payload:
   - '+.icy-capital.com'
   - '+.icyip.com'
   - '+.iczhiku.com'
-  - '+.iczhiyu.com'
   - '+.iczoom.com'
   - '+.id-bear.com'
   - '+.id-linking.com'
@@ -29744,7 +29738,6 @@ payload:
   - '+.immomo.com'
   - '+.immomogame.com'
   - '+.immusician.com'
-  - '+.immusoul.com'
   - '+.imnerd.org'
   - '+.imnight.com'
   - '+.imnks.com'
@@ -29864,7 +29857,6 @@ payload:
   - '+.inewhope.com'
   - '+.inewland.com'
   - '+.inewoffice.com'
-  - '+.inewya.com'
   - '+.inezha.com'
   - '+.infarts.net'
   - '+.infertilitybridge.com'
@@ -31732,7 +31724,6 @@ payload:
   - '+.jingyanzhinan.com'
   - '+.jingyeqian.com'
   - '+.jingyi186.com'
-  - '+.jingying.com'
   - '+.jingyougz.com'
   - '+.jingytech.com'
   - '+.jingyu.com'
@@ -32840,7 +32831,6 @@ payload:
   - '+.junjiahao.com'
   - '+.junjichu.net'
   - '+.junjing.net'
-  - '+.junjunfudao.com'
   - '+.junka.com'
   - '+.junlee.net'
   - '+.junlongtech.com'
@@ -35477,6 +35467,7 @@ payload:
   - '+.lexiang-asset.com'
   - '+.lexiangjian.com'
   - '+.lexiangla.com'
+  - '+.lexiangzuji.com'
   - '+.lexin.com'
   - '+.lexinchina.com'
   - '+.lexue.com'
@@ -39767,6 +39758,7 @@ payload:
   - '+.myie.me'
   - '+.myie9.com'
   - '+.myip.la'
+  - '+.myipadbox.com'
   - '+.myiplay.com'
   - '+.myir-tech.com'
   - '+.myirtech.com'
@@ -40451,6 +40443,7 @@ payload:
   - '+.ngbbs.com'
   - '+.ngcgears.com'
   - '+.ngctransmission.com'
+  - '+.ngevnsmk5.com'
   - '+.ngfans.net'
   - '+.ngh6.com'
   - '+.nginstar.net'
@@ -42386,7 +42379,6 @@ payload:
   - '+.pharmcube.com'
   - '+.phaser-china.com'
   - '+.phb123.com'
-  - '+.phdwu.com'
   - '+.phedu.net'
   - '+.phezzan.com'
   - '+.philipswechat.com'
@@ -44267,6 +44259,7 @@ payload:
   - '+.qlpw.net'
   - '+.qlrc.com'
   - '+.qls.fun'
+  - '+.qlspx.com'
   - '+.qlteacher.com'
   - '+.qluu.com'
   - '+.qlwmw.com'
@@ -45898,6 +45891,7 @@ payload:
   - '+.ryc360.com'
   - '+.rydth5.com'
   - '+.ryeex.com'
+  - '+.rygjaqjaq.com'
   - '+.ryjiaoyu.com'
   - '+.ryjoin.com'
   - '+.rylinkworld.com'
@@ -47040,7 +47034,6 @@ payload:
   - '+.shanzhen.me'
   - '+.shanzhonglei.com'
   - '+.shaoerbc.org'
-  - '+.shaoerbianchengwang.com'
   - '+.shaogood.com'
   - '+.shaoke.com'
   - '+.shaolintagou.com'
@@ -47070,7 +47063,6 @@ payload:
   - '+.sharevdi.com'
   - '+.sharewaf.com'
   - '+.sharewithu.com'
-  - '+.sharing-water.com'
   - '+.sharkselection.com'
   - '+.sharpbai.com'
   - '+.sharpmobi.com'
@@ -48966,6 +48958,7 @@ payload:
   - '+.soulgame.mobi'
   - '+.souluo.net'
   - '+.soulv.com'
+  - '+.soulwonderland.com'
   - '+.soundai.info'
   - '+.soupan.info'
   - '+.soupf.net'
@@ -49776,7 +49769,6 @@ payload:
   - '+.suxiege.com'
   - '+.suxing.me'
   - '+.suxuewang.com'
-  - '+.suy.me'
   - '+.suyanw.com'
   - '+.suyuening.com'
   - '+.suyugame.com'
@@ -52011,7 +52003,6 @@ payload:
   - '+.toutiaocloud.net'
   - '+.toutiaoimg.com'
   - '+.toutiaoimg.net'
-  - '+.toutiaojc.com'
   - '+.toutiaolite.com'
   - '+.toutiaolite1.com'
   - '+.toutiaonanren.com'
@@ -53463,7 +53454,6 @@ payload:
   - '+.uu1314.com'
   - '+.uu178.com'
   - '+.uu38.com'
-  - '+.uu41.com'
   - '+.uu456.com'
   - '+.uu55.tv'
   - '+.uu66.com'
@@ -54552,7 +54542,6 @@ payload:
   - '+.wangxc.club'
   - '+.wangxiangyule.com'
   - '+.wangxianyuan.com'
-  - '+.wangxiao.com'
   - '+.wangxiao.net'
   - '+.wangxiaobao.cc'
   - '+.wangxiaobao.com'
@@ -56324,7 +56313,6 @@ payload:
   - '+.word666.com'
   - '+.wordlm.com'
   - '+.wordpress.la'
-  - '+.wordpresshy.com'
   - '+.wordscan.net'
   - '+.work28.com'
   - '+.workchat.com'
@@ -56402,7 +56390,6 @@ payload:
   - '+.woyao998.com'
   - '+.woyaobaoliang.com'
   - '+.woyaofanyi.com'
-  - '+.woyaogexing.com'
   - '+.woyaoqiudai.com'
   - '+.woyaosouti.com'
   - '+.woyaozhan.com'
@@ -56562,7 +56549,6 @@ payload:
   - '+.wsxa.com'
   - '+.wsxc.me'
   - '+.wsxcme.com'
-  - '+.wsxddg.com'
   - '+.wsy7.com'
   - '+.wsyyxz.com'
   - '+.wszwh.org'
@@ -58264,7 +58250,6 @@ payload:
   - '+.xingzhilian.net'
   - '+.xingzhiyue.com'
   - '+.xingzuo.com'
-  - '+.xingzuo123.com'
   - '+.xingzuo8090.com'
   - '+.xingzuoshu.com'
   - '+.xingzuowu.com'
@@ -59340,7 +59325,6 @@ payload:
   - '+.xv5b.com'
   - '+.xvision.club'
   - '+.xvista.com'
-  - '+.xvna.com'
   - '+.xvv.cc'
   - '+.xw-china.com'
   - '+.xw1806.com'
@@ -60976,7 +60960,6 @@ payload:
   - '+.ymtjfxly.com'
   - '+.ymtmt.com'
   - '+.ymvkt.com'
-  - '+.ymwl234.com'
   - '+.ymxinxi.com'
   - '+.ymxxs.com'
   - '+.ymyun.com'
@@ -62278,7 +62261,6 @@ payload:
   - '+.ywshouyou.com'
   - '+.ywsoftware.com'
   - '+.ywtd.xyz'
-  - '+.ywtlfishing.com'
   - '+.ywtrzm.com'
   - '+.ywtuchuang1.com'
   - '+.ywtx.cc'
@@ -64996,6 +64978,7 @@ payload:
   - '+.zwwdm.com'
   - '+.zwwltkl.com'
   - '+.zwwx.com'
+  - '+.zwzrent.com'
   - '+.zwzsh.net'
   - '+.zwzyzx.com'
   - '+.zx-casting.com'
