--- a/directbak.yaml
+++ b/directbak.yaml
@@ -658,7 +658,6 @@ payload:
   - '+.0s8s.com'
   - '+.0sm.com'
   - '+.0x0.biz'
-  - '+.0x0.ooo'
   - '+.0x100.club'
   - '+.0x3.me'
   - '+.0x5.me'
@@ -3221,7 +3220,6 @@ payload:
   - '+.3g2win.com'
   - '+.3g3h.org'
   - '+.3g567.com'
-  - '+.3gcomet.com'
   - '+.3gdisk.com'
   - '+.3glasses.com'
   - '+.3gmimo.com'
@@ -4367,7 +4365,6 @@ payload:
   - '+.52dgs.net'
   - '+.52digua.com'
   - '+.52dmtp.com'
-  - '+.52dns.com'
   - '+.52doc.com'
   - '+.52dr.net'
   - '+.52dsy.com'
@@ -6699,7 +6696,6 @@ payload:
   - '+.94831.com'
   - '+.9495.com'
   - '+.949678.com'
-  - '+.9499.net'
   - '+.94994.com'
   - '+.949949.com'
   - '+.94afx.com'
@@ -11316,7 +11312,6 @@ payload:
   - '+.bkxs.net'
   - '+.bkzzy.com'
   - '+.bl.com'
-  - '+.bl9k.com'
   - '+.bla01.com'
   - '+.black-unique.com'
   - '+.blackbirdsport.com'
@@ -11563,6 +11558,7 @@ payload:
   - '+.bolejiang.com'
   - '+.bolelink.com'
   - '+.bolexiaozhao.com'
+  - '+.boling04.com'
   - '+.boll.me'
   - '+.bolo.me'
   - '+.bolopp.com'
@@ -13675,7 +13671,6 @@ payload:
   - '+.chengezhao.com'
   - '+.chengfeilong.com'
   - '+.chenggongguiji.com'
-  - '+.chenggua.com'
   - '+.chengguw.com'
   - '+.chengji1859.com'
   - '+.chengjieos.com'
@@ -14677,7 +14672,6 @@ payload:
   - '+.chuaiguo.com'
   - '+.chuairan.com'
   - '+.chuaizhe.com'
-  - '+.chuanbofanyi.com'
   - '+.chuanbojia.com'
   - '+.chuanboyi.com'
   - '+.chuandaizc.com'
@@ -36233,7 +36227,6 @@ payload:
   - '+.liweiliang.com'
   - '+.liwenzhou.com'
   - '+.liwinon.com'
-  - '+.liwngad.com'
   - '+.liwuhy.com'
   - '+.liwumaoapp.com'
   - '+.liwushuo.com'
@@ -37814,6 +37807,7 @@ payload:
   - '+.maxvinch.com'
   - '+.maxwealthfund.com'
   - '+.maxwi.com'
+  - '+.maxws.com'
   - '+.maxxipoint.com'
   - '+.may.ltd'
   - '+.maya09.com'
@@ -48576,7 +48570,6 @@ payload:
   - '+.smokeliq.com'
   - '+.smoothgroup.cc'
   - '+.smovie168.com'
-  - '+.smpeizi.com'
   - '+.smppw.com'
   - '+.sms9.net'
   - '+.smsbao.com'
@@ -48680,7 +48673,6 @@ payload:
   - '+.so147.com'
   - '+.so8848.com'
   - '+.soarwatch.com'
-  - '+.soba8.com'
   - '+.sobaidupan.com'
   - '+.sobeian.com'
   - '+.sobereva.com'
@@ -52238,7 +52230,6 @@ payload:
   - '+.tsingtoo.com'
   - '+.tskscn.com'
   - '+.tskscn.org'
-  - '+.tslapinshang.com'
   - '+.tsljzs.com'
   - '+.tslongtai.com'
   - '+.tslsmart.com'
@@ -59060,6 +59051,7 @@ payload:
   - '+.xtutoring.com'
   - '+.xtxcm.com'
   - '+.xtyxdq.com'
+  - '+.xtzjcz.com'
   - '+.xu1s.com'
   - '+.xu7b.com'
   - '+.xuanad.com'
@@ -59112,7 +59104,6 @@ payload:
   - '+.xudoodoo.com'
   - '+.xuduan.vip'
   - '+.xue163.net'
-  - '+.xue3dmax.com'
   - '+.xue63.com'
   - '+.xueanquan.com'
   - '+.xueba100.com'
