--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3727,7 +3727,6 @@ payload:
   - '+.519.best'
   - '+.519397.com'
   - '+.51969.com'
-  - '+.51985.net'
   - '+.5199.cc'
   - '+.5199.com'
   - '+.519rv.com'
@@ -5994,6 +5993,7 @@ payload:
   - '+.81toutiao.com'
   - '+.81tt.net'
   - '+.81xy.com'
+  - '+.81xz.com'
   - '+.81yy.cc'
   - '+.81zw.com'
   - '+.81zw.us'
@@ -9385,7 +9385,6 @@ payload:
   - '+.avrvi.com'
   - '+.avrw.com'
   - '+.avtechcn.com'
-  - '+.avtt0033.com'
   - '+.avtt830.com'
   - '+.aw-ol.com'
   - '+.aw.cc'
@@ -11183,7 +11182,6 @@ payload:
   - '+.bjrc.com'
   - '+.bjrcb.com'
   - '+.bjrdhx.com'
-  - '+.bjrel.com'
   - '+.bjretech.com'
   - '+.bjreview.com'
   - '+.bjrhxp.com'
@@ -13480,7 +13478,6 @@ payload:
   - '+.channeleffect.com'
   - '+.channingsun.bid'
   - '+.chanpay.com'
-  - '+.chanpin.biz'
   - '+.chanpin100.com'
   - '+.chanpinban.com'
   - '+.chanpindashi.com'
@@ -14498,7 +14495,6 @@ payload:
   - '+.chinazwds.com'
   - '+.chinazwds.org'
   - '+.chinazxt.com'
-  - '+.chinazyjr.com'
   - '+.chinca.org'
   - '+.chindiaforum.com'
   - '+.chine-info.com'
@@ -19606,6 +19602,7 @@ payload:
   - '+.dxf5.com'
   - '+.dxf6.com'
   - '+.dxias.com'
+  - '+.dxiazaicc.com'
   - '+.dxjs.com'
   - '+.dxlfile.com'
   - '+.dxlmdd.com'
@@ -29609,7 +29606,6 @@ payload:
   - '+.im577.com'
   - '+.im5i.com'
   - '+.im87.net'
-  - '+.imac.hk'
   - '+.imaccn.com'
   - '+.imaegoo.com'
   - '+.imageaccelerate.com'
@@ -31304,6 +31300,7 @@ payload:
   - '+.jianjiaobuluo.com'
   - '+.jianjie8.com'
   - '+.jiankang.com'
+  - '+.jiankang.org'
   - '+.jiankanghebei.com'
   - '+.jiankangju.com'
   - '+.jianke.cc'
@@ -31572,6 +31569,7 @@ payload:
   - '+.jiliguala.com'
   - '+.jiliguara.xyz'
   - '+.jilingwy.org'
+  - '+.jilinoffcn.com'
   - '+.jilinpujiyiyuan.com'
   - '+.jilinwula.com'
   - '+.jiliyun.com'
@@ -32717,6 +32715,7 @@ payload:
   - '+.jucheng01.net'
   - '+.juchuangbio.com'
   - '+.judouapp.com'
+  - '+.juduo.cc'
   - '+.juduoping.com'
   - '+.jue.so'
   - '+.jue1.com'
@@ -42227,6 +42226,7 @@ payload:
   - '+.pdim.gs'
   - '+.pdm.so'
   - '+.pdosgk.com'
+  - '+.pdowncc.com'
   - '+.pdrcfw.com'
   - '+.pdreading.com'
   - '+.pdryx.com'
@@ -47174,6 +47174,7 @@ payload:
   - '+.shenghuozhe.net'
   - '+.shengjing360.com'
   - '+.shengjoy.com'
+  - '+.shengjunshi.com'
   - '+.shengli.com'
   - '+.shengming.net'
   - '+.shengniuuz.com'
@@ -54442,6 +54443,7 @@ payload:
   - '+.wang1314.net'
   - '+.wanga.me'
   - '+.wangamela.com'
+  - '+.wangan.com'
   - '+.wanganedu.com'
   - '+.wangbixi.com'
   - '+.wangcaio2o.com'
@@ -55830,7 +55832,6 @@ payload:
   - '+.win7china.com'
   - '+.win7en.com'
   - '+.win7qijian.com'
-  - '+.win7qjb.com'
   - '+.win7sky.com'
   - '+.win7w.com'
   - '+.win7xzb.com'
@@ -59331,6 +59332,7 @@ payload:
   - '+.xwei.tv'
   - '+.xwhb.com'
   - '+.xwhodesign.com'
+  - '+.xwie.com'
   - '+.xwjqr.com'
   - '+.xwjr.com'
   - '+.xwjy.org'
@@ -61515,7 +61517,6 @@ payload:
   - '+.yqmb001.com'
   - '+.yqmh.com'
   - '+.yqphh.com'
-  - '+.yqptzx.com'
   - '+.yqsbz.com'
   - '+.yqtc.com'
   - '+.yqtxzm.com'
@@ -64017,6 +64018,7 @@ payload:
   - '+.ziewje.com'
   - '+.zifandiaosu.com'
   - '+.zifeiwuya.com'
+  - '+.zifumao.com'
   - '+.zige365.com'
   - '+.zigecha.com'
   - '+.zigeer.com'
@@ -64376,6 +64378,7 @@ payload:
   - '+.zkxblog.com'
   - '+.zkxlkj.net'
   - '+.zkxww.com'
+  - '+.zkyai.com'
   - '+.zkydib.com'
   - '+.zkyouxi.com'
   - '+.zkyxls.com'
