--- a/directbak.yaml
+++ b/directbak.yaml
@@ -328,7 +328,6 @@ payload:
   - '+.0511w.com'
   - '+.0512118114.com'
   - '+.0512pearl.com'
-  - '+.0512s.com'
   - '+.0512zp.com'
   - '+.0513.net'
   - '+.0513.org'
@@ -3137,7 +3136,6 @@ payload:
   - '+.39fengliao.com'
   - '+.39h83s.com'
   - '+.39health.com'
-  - '+.39hp.com'
   - '+.39jks.com'
   - '+.39kf.com'
   - '+.39meitu.com'
@@ -13432,6 +13430,7 @@ payload:
   - '+.changfon.com'
   - '+.changfubai.com'
   - '+.changhe.tech'
+  - '+.changhong-network.com'
   - '+.changhong.com'
   - '+.changhongdianzi.com'
   - '+.changhongit.com'
@@ -18111,7 +18110,6 @@ payload:
   - '+.dginfo.com'
   - '+.dgjiuqi.com'
   - '+.dgjoy.co'
-  - '+.dgjs123.com'
   - '+.dgjxmk.com'
   - '+.dgjyw.com'
   - '+.dglpool.com'
@@ -20489,6 +20487,7 @@ payload:
   - '+.elong.net'
   - '+.elongshine.com'
   - '+.elongstatic.com'
+  - '+.elontest.com'
   - '+.elpcon.com'
   - '+.elpwc.com'
   - '+.els001.com'
@@ -21405,7 +21404,6 @@ payload:
   - '+.fanquanba.com'
   - '+.fanquanwang.com'
   - '+.fanruan.com'
-  - '+.fans.fans'
   - '+.fans1.com'
   - '+.fans8.com'
   - '+.fansgu.com'
@@ -29670,6 +29668,7 @@ payload:
   - '+.imgeek.org'
   - '+.imgets.com'
   - '+.imgii.com'
+  - '+.imgkr.com'
   - '+.imglefeng.com'
   - '+.imglink.win'
   - '+.imgo.tv'
@@ -31822,6 +31821,7 @@ payload:
   - '+.jiongcun.com'
   - '+.jiongdm.com'
   - '+.jiongji.com'
+  - '+.jiongtoutiao.com'
   - '+.jiongyaya.com'
   - '+.jiou.me'
   - '+.jiouyun.com'
@@ -32631,7 +32631,6 @@ payload:
   - '+.jsxat788.com'
   - '+.jsxcra.com'
   - '+.jsxfedu.com'
-  - '+.jsxhrb.com'
   - '+.jsxhrcb.com'
   - '+.jsxhw.org'
   - '+.jsxiaoguo.com'
@@ -34332,7 +34331,6 @@ payload:
   - '+.kuailelunwen.com'
   - '+.kuailesh.com'
   - '+.kuailetongyao.com'
-  - '+.kuaileworld.com'
   - '+.kuailexs.com'
   - '+.kuailezu.com'
   - '+.kuailiyu.com'
@@ -40889,7 +40887,6 @@ payload:
   - '+.nsoft.vip'
   - '+.nsrfww.com'
   - '+.nsrjlb.com'
-  - '+.nss.im'
   - '+.nsshare.com'
   - '+.nsstream.com'
   - '+.nstooll.com'
@@ -44099,7 +44096,6 @@ payload:
   - '+.qiuzhang.com'
   - '+.qiuzhijiangtang.com'
   - '+.qiuziti.com'
-  - '+.qiuziyuan.net'
   - '+.qivsod.com'
   - '+.qiwen001.com'
   - '+.qiwen007.com'
@@ -44321,7 +44317,6 @@ payload:
   - '+.qqbiaoqing.com'
   - '+.qqbiaoqing8.com'
   - '+.qqbibile.com'
-  - '+.qqcedsrc.com'
   - '+.qqcf.com'
   - '+.qqcg.com'
   - '+.qqcjw.com'
@@ -52157,7 +52152,6 @@ payload:
   - '+.trustsoc.com'
   - '+.trustutn.org'
   - '+.trwl.net'
-  - '+.try2explore.com'
   - '+.tryenough.com'
   - '+.tryfun.com'
   - '+.tryineapp.com'
@@ -53215,6 +53209,7 @@ payload:
   - '+.unixfbi.com'
   - '+.unixhot.com'
   - '+.unixidc.com'
+  - '+.unixs.org'
   - '+.unizai.com'
   - '+.unjmz.com'
   - '+.unjs.com'
@@ -61404,7 +61399,6 @@ payload:
   - '+.youzhiwk.com'
   - '+.youzhixueyuan.com'
   - '+.youzhuan.com'
-  - '+.youzhuanhua.com'
   - '+.youzi02.com'
   - '+.youzibank.com'
   - '+.youzibuy.com'
