--- a/directbak.yaml
+++ b/directbak.yaml
@@ -807,6 +807,7 @@ payload:
   - '+.101weiqi.com'
   - '+.1020m.com'
   - '+.1024.com'
+  - '+.1024.cool'
   - '+.1024.ink'
   - '+.1024dmg.com'
   - '+.1024g.com'
@@ -4319,6 +4320,7 @@ payload:
   - '+.52841819.com'
   - '+.528500.com'
   - '+.528529.com'
+  - '+.528791725.com'
   - '+.52892.com'
   - '+.528btc.com'
   - '+.528day.com'
@@ -5205,6 +5207,7 @@ payload:
   - '+.655yx.com'
   - '+.656463.com'
   - '+.65650000.com'
+  - '+.65677358625.com'
   - '+.65688qp.com'
   - '+.65875.com'
   - '+.65918.tw'
@@ -8615,6 +8618,7 @@ payload:
   - '+.anrayer.com'
   - '+.anren.org'
   - '+.anrenmind.com'
+  - '+.anroif.com'
   - '+.anruichina.com'
   - '+.ansbabe.com'
   - '+.ansgo.com'
@@ -10761,7 +10765,6 @@ payload:
   - '+.bilihot.com'
   - '+.biliimg.com'
   - '+.bilimoe.com'
-  - '+.bilingling.com'
   - '+.bilive.com'
   - '+.bilivideo.com'
   - '+.biliyu.com'
@@ -12953,6 +12956,7 @@ payload:
   - '+.cdn-files.net'
   - '+.cdn-gw-dv.net'
   - '+.cdn-hotels.com'
+  - '+.cdn-ng.net'
   - '+.cdn-speed.com'
   - '+.cdn-static.farfetch-contents.com'
   - '+.cdn-uc.cc'
@@ -17930,7 +17934,6 @@ payload:
   - '+.delunyk.com'
   - '+.demage.com'
   - '+.demaxiya.com'
-  - '+.demgs.com'
   - '+.demix.cc'
   - '+.demixc.com'
   - '+.demlution.com'
@@ -19660,12 +19663,12 @@ payload:
   - '+.dyrcb.net'
   - '+.dyrjjt.com'
   - '+.dytechnolog.com'
+  - '+.dytg02.xyz'
   - '+.dytg389.xyz'
   - '+.dytg390.xyz'
   - '+.dytg391.xyz'
   - '+.dytol.com'
   - '+.dytt.net'
-  - '+.dytt2019.net'
   - '+.dytt789.com'
   - '+.dytt7899.com'
   - '+.dytt8.com'
@@ -22384,6 +22387,7 @@ payload:
   - '+.foxzld.com'
   - '+.foyuan.net'
   - '+.fpdisplay.com'
+  - '+.fpga-china.com'
   - '+.fpgabbs.com'
   - '+.fpgaw.com'
   - '+.fphis.com'
@@ -22877,7 +22881,6 @@ payload:
   - '+.ga001.com'
   - '+.ga25.com'
   - '+.gaapqcloud.com'
-  - '+.gabiplay.com'
   - '+.gabuleu.com'
   - '+.gac-capital.com'
   - '+.gac-nio.com'
@@ -24534,7 +24537,6 @@ payload:
   - '+.guihuayun.com'
   - '+.guiji.com'
   - '+.guijinshu.com'
-  - '+.guikeyun.com'
   - '+.guiliangtechnology.com'
   - '+.guilin.la'
   - '+.guilinhd.com'
@@ -28198,7 +28200,6 @@ payload:
   - '+.huolug.com'
   - '+.huomakeji.com'
   - '+.huomao.com'
-  - '+.huomaotv.com'
   - '+.huomaow.com'
   - '+.huomaqun.com'
   - '+.huoming.com'
@@ -28284,6 +28285,7 @@ payload:
   - '+.huxiucdn.com'
   - '+.huya.cm'
   - '+.huya.com'
+  - '+.huya040.xyz'
   - '+.huyahaha.com'
   - '+.huyanapp.com'
   - '+.huyanbao.com'
@@ -28400,7 +28402,6 @@ payload:
   - '+.hxsme.org'
   - '+.hxtk.com'
   - '+.hxwglm.com'
-  - '+.hxxdsb.com'
   - '+.hxxkw.org'
   - '+.hxxl6.com'
   - '+.hxyjw.com'
@@ -34554,6 +34555,7 @@ payload:
   - '+.kvhnn.com'
   - '+.kviso.com'
   - '+.kvkft.com'
+  - '+.kvmaa.com'
   - '+.kvogues.com'
   - '+.kvov.com'
   - '+.kvov.org'
@@ -34563,6 +34565,7 @@ payload:
   - '+.kwaixiaodian.com'
   - '+.kwaiying.com'
   - '+.kwaizt.com'
+  - '+.kweaake.cyou'
   - '+.kwenku.com'
   - '+.kwimgs.com'
   - '+.kwin.wang'
@@ -34594,6 +34597,7 @@ payload:
   - '+.kxinyk.com'
   - '+.kxji.com'
   - '+.kxjlt.org'
+  - '+.kxp7.xyz'
   - '+.kxpay.net'
   - '+.kxqo2ev.com'
   - '+.kxscience.com'
@@ -34645,7 +34649,9 @@ payload:
   - '+.kyzyj.com'
   - '+.kz8yx.com'
   - '+.kza.cc'
+  - '+.kzeaa.com'
   - '+.kzecc.com'
+  - '+.kzenn.com'
   - '+.kzerr.com'
   - '+.kzore.com'
   - '+.kzt.cc'
@@ -39974,6 +39980,7 @@ payload:
   - '+.nandagang.cc'
   - '+.nandasoft.com'
   - '+.nandu.com'
+  - '+.nandufoundation.org'
   - '+.nanerjia.com'
   - '+.nanerlee.me'
   - '+.nanfu.com'
@@ -40020,6 +40027,7 @@ payload:
   - '+.naozhong.net'
   - '+.napiantian.com'
   - '+.naquan.com'
+  - '+.naradafoundation.org'
   - '+.narkii.com'
   - '+.narrowad.com'
   - '+.naruto.red'
@@ -48595,7 +48603,6 @@ payload:
   - '+.snhrm.com'
   - '+.sniec.net'
   - '+.snieri.com'
-  - '+.snifast.com'
   - '+.snjairport.com'
   - '+.snjbs.com'
   - '+.snjjiu.com'
@@ -49142,7 +49149,6 @@ payload:
   - '+.srxww.com'
   - '+.sryjx.com'
   - '+.srzc.com'
-  - '+.srzxg.com'
   - '+.srzxjt.com'
   - '+.ss-ceo.com'
   - '+.ss0.me'
@@ -57748,7 +57754,6 @@ payload:
   - '+.xiaomastack.com'
   - '+.xiaomav.com'
   - '+.xiaomaxitong.com'
-  - '+.xiaomayi.co'
   - '+.xiaomayi88.com'
   - '+.xiaomei.cc'
   - '+.xiaomeiti.com'
@@ -58467,7 +58472,6 @@ payload:
   - '+.xiupin.com'
   - '+.xiuren.com'
   - '+.xiurenb.com'
-  - '+.xiurenji.net'
   - '+.xiushao.com'
   - '+.xiusheji.com'
   - '+.xiusheji.net'
