--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2308,7 +2308,6 @@ payload:
   - '+.263vps.com'
   - '+.263xmail.com'
   - '+.263y.com'
-  - '+.263ytx.com'
   - '+.263zw.com'
   - '+.264006.com'
   - '+.26595.com'
@@ -3560,7 +3559,6 @@ payload:
   - '+.4k-w.com'
   - '+.4k123.com'
   - '+.4kbizhi.com'
-  - '+.4kmov.cc'
   - '+.4kong.com'
   - '+.4kya.com'
   - '+.4l.hk'
@@ -4315,7 +4313,6 @@ payload:
   - '+.5277.com'
   - '+.527meeting.com'
   - '+.527pk.com'
-  - '+.527u.com'
   - '+.5281.com'
   - '+.52841819.com'
   - '+.528500.com'
@@ -8143,7 +8140,6 @@ payload:
   - '+.aletui.com'
   - '+.alexhaohao.com'
   - '+.alexyan.cc'
-  - '+.aleyoo.com'
   - '+.alfeng.com'
   - '+.alfheim.cc'
   - '+.algorithmart.com'
@@ -8161,6 +8157,7 @@ payload:
   - '+.alibaba.com'
   - '+.alibaba.net'
   - '+.alibabachengdun.com'
+  - '+.alibabachengdun.net'
   - '+.alibabacloud.com'
   - '+.alibabacorp.com'
   - '+.alibabadns.com'
@@ -11259,7 +11256,6 @@ payload:
   - '+.bjxx.vip'
   - '+.bjxx8.com'
   - '+.bjxydh.com'
-  - '+.bjxztqn.com'
   - '+.bjyah.com'
   - '+.bjyczb.com'
   - '+.bjydzy.com'
@@ -11505,7 +11501,6 @@ payload:
   - '+.boduhappiness.com'
   - '+.boe.com'
   - '+.boendejc.com'
-  - '+.boertemc.com'
   - '+.bofangw.com'
   - '+.bofengkj.com'
   - '+.bofyou.com'
@@ -13022,7 +13017,6 @@ payload:
   - '+.cdntips.net'
   - '+.cdnudns.com'
   - '+.cdnunion.com'
-  - '+.cdnunion.org'
   - '+.cdnvp.com'
   - '+.cdnvpn.net'
   - '+.cdnvue.com'
@@ -16869,6 +16863,7 @@ payload:
   - '+.cuour-edu.com'
   - '+.cuour.com'
   - '+.cuour.org'
+  - '+.cupaaki.cyou'
   - '+.cupdapp.com'
   - '+.cupdata.com'
   - '+.cupdns.com'
@@ -19783,7 +19778,6 @@ payload:
   - '+.e-jjj.com'
   - '+.e-jlt.com'
   - '+.e-kawai.com'
-  - '+.e-lifemall.com'
   - '+.e-lining.com'
   - '+.e-lock.xin'
   - '+.e-mallchina.com'
@@ -20676,7 +20670,6 @@ payload:
   - '+.epetpet.com'
   - '+.epexpo-asia.com'
   - '+.ephen.me'
-  - '+.ephoton.me'
   - '+.epichust.com'
   - '+.epinautomation.com'
   - '+.epinduo.com'
@@ -22263,7 +22256,6 @@ payload:
   - '+.fodoco.com'
   - '+.foguanghui.org'
   - '+.fokan88.com'
-  - '+.folieyun.com'
   - '+.folluo.me'
   - '+.folou.com'
   - '+.fomen123.com'
@@ -24886,7 +24878,6 @@ payload:
   - '+.gzfsnet.com'
   - '+.gzgc120.com'
   - '+.gzgdwl.com'
-  - '+.gzguard12th.com'
   - '+.gzgxkj.com'
   - '+.gzhakj.com'
   - '+.gzhangcha.com'
@@ -26073,6 +26064,7 @@ payload:
   - '+.hdurl.me'
   - '+.hduzplus.xyz'
   - '+.hdwbsaas.com'
+  - '+.hdwebpyqa.com'
   - '+.hdwebpyqe.com'
   - '+.hdyouxi.com'
   - '+.hdypw.com'
@@ -26957,7 +26949,6 @@ payload:
   - '+.hnklnf.com'
   - '+.hnks.com'
   - '+.hnksgf.com'
-  - '+.hnksln.com'
   - '+.hnktgame.com'
   - '+.hnkuaifawu.com'
   - '+.hnkzy.com'
@@ -27007,7 +26998,6 @@ payload:
   - '+.hnsss.com'
   - '+.hnst.org'
   - '+.hnstguolu.net'
-  - '+.hnsy386.com'
   - '+.hnsyda.com'
   - '+.hnsyu.net'
   - '+.hnteacher.net'
@@ -28824,7 +28814,6 @@ payload:
   - '+.ibtyun.com'
   - '+.ibuick.com'
   - '+.ibuscloud.com'
-  - '+.ibuspan.com'
   - '+.ibuying.com'
   - '+.ibw.cc'
   - '+.ibytedapm.com'
@@ -30511,7 +30500,6 @@ payload:
   - '+.itsvse.com'
   - '+.ittribalwo.com'
   - '+.ituad.com'
-  - '+.ituba.cc'
   - '+.itugo.com'
   - '+.ituite.com'
   - '+.itushuo.com'
@@ -30574,7 +30562,6 @@ payload:
   - '+.ivybaby.me'
   - '+.ivycoffee.com'
   - '+.ivydad.com'
-  - '+.ivydom.com'
   - '+.ivypub.org'
   - '+.ivyschools.com'
   - '+.ivysun.net'
@@ -32719,6 +32706,7 @@ payload:
   - '+.jufengshang.com'
   - '+.jufidc.com'
   - '+.jufoinfo.com'
+  - '+.jugezi.com'
   - '+.juhaof.com'
   - '+.juhaokan.org'
   - '+.juhe.com'
@@ -33671,7 +33659,6 @@ payload:
   - '+.kevinhewu.com'
   - '+.kevinjiang.info'
   - '+.kevinlq.com'
-  - '+.kewail.com'
   - '+.kexianggroup.com'
   - '+.kexin001.com'
   - '+.kexing100.com'
@@ -34029,7 +34016,6 @@ payload:
   - '+.koaladoit.com'
   - '+.koalareading.com'
   - '+.kobold1855.com'
-  - '+.koboldgame.com'
   - '+.kobox.tv'
   - '+.kocla.com'
   - '+.kodcloud.com'
@@ -36235,7 +36221,6 @@ payload:
   - '+.liyanmobi.com'
   - '+.liyaochao.com'
   - '+.liyingfei.com'
-  - '+.liyongseo.com'
   - '+.liyp.cc'
   - '+.liyu8.com'
   - '+.liyuanheng.com'
@@ -37026,7 +37011,6 @@ payload:
   - '+.lvgaud.ga'
   - '+.lvgou.com'
   - '+.lvguang.net'
-  - '+.lvhezi.com'
   - '+.lvhuadai.com'
   - '+.lvjinsuo.com'
   - '+.lvkun.site'
@@ -37215,6 +37199,7 @@ payload:
   - '+.lywf.me'
   - '+.lywww.com'
   - '+.lywxww.com'
+  - '+.lyxyjg.com'
   - '+.lyxyxx.com'
   - '+.lyy99.com'
   - '+.lyyapp.com'
@@ -39412,7 +39397,6 @@ payload:
   - '+.mtavip.com'
   - '+.mtblj.com'
   - '+.mtchome.com'
-  - '+.mtcm006.com'
   - '+.mtcnsoft.com'
   - '+.mtcop.com'
   - '+.mtcsys.com'
@@ -39496,7 +39480,6 @@ payload:
   - '+.mukool.com'
   - '+.mulazim.com'
   - '+.mulinf99.com'
-  - '+.mum.cc'
   - '+.mumayi.com'
   - '+.mumu01.com'
   - '+.muniao.com'
@@ -40259,7 +40242,6 @@ payload:
   - '+.netpi.me'
   - '+.netposa.com'
   - '+.netqd.com'
-  - '+.netqon.com'
   - '+.netsmell.com'
   - '+.netsoz.com'
   - '+.netspreading.com'
@@ -42589,7 +42571,6 @@ payload:
   - '+.pingyin.cc'
   - '+.pingyou.cc'
   - '+.pinhaohuo.com'
-  - '+.pinhecha.com'
   - '+.pinhuba.com'
   - '+.pinhui001.com'
   - '+.pinidea.co'
@@ -43118,7 +43099,6 @@ payload:
   - '+.psjxty.com'
   - '+.psnine.com'
   - '+.psoneart.com'
-  - '+.psongyou.com'
   - '+.pssclub.com'
   - '+.pstatp.com'
   - '+.pstips.net'
@@ -43674,6 +43654,7 @@ payload:
   - '+.qianmo.info'
   - '+.qianmoqi.com'
   - '+.qianmu.org'
+  - '+.qianng.com'
   - '+.qianniu.com'
   - '+.qianp.com'
   - '+.qianpailive.com'
@@ -49540,7 +49521,6 @@ payload:
   - '+.sumygg.com'
   - '+.sumzc.com'
   - '+.sun-ada.net'
-  - '+.sun-lion.com'
   - '+.sun-wish.com'
   - '+.sun0769.com'
   - '+.sun0769ns.com'
@@ -52136,6 +52116,7 @@ payload:
   - '+.trueart.com'
   - '+.truebuty.com'
   - '+.truechat365.com'
+  - '+.truedian.com'
   - '+.trueeyu.com'
   - '+.trueland.net'
   - '+.trueme.net'
@@ -54219,6 +54200,7 @@ payload:
   - '+.vxuey.com'
   - '+.vycool.com'
   - '+.vyin.com'
+  - '+.vynior.com'
   - '+.vysj.com'
   - '+.vyuan8.com'
   - '+.vyun.com'
@@ -54748,7 +54730,6 @@ payload:
   - '+.wdmcake.com'
   - '+.wdmuz.com'
   - '+.wdres.com'
-  - '+.wdshouji.com'
   - '+.wdsjz.com'
   - '+.wdsrc.com'
   - '+.wdstory.com'
@@ -55901,7 +55882,6 @@ payload:
   - '+.wisdom-braun.com'
   - '+.wisdomcmmi.com'
   - '+.wisdontech.com'
-  - '+.wisdr.com'
   - '+.wisdri.com'
   - '+.wise-iot.com'
   - '+.wiseah.com'
@@ -62745,7 +62725,6 @@ payload:
   - '+.zejiri.net'
   - '+.zeju.com'
   - '+.zelininfo.com'
-  - '+.zelinonline.com'
   - '+.zemismart.com'
   - '+.zemuo.com'
   - '+.zen-est.com'
@@ -64767,7 +64746,6 @@ payload:
   - '+.zuche.com'
   - '+.zuchecdn.com'
   - '+.zucp.net'
-  - '+.zudeapp.com'
   - '+.zudequ.com'
   - '+.zudong.com'
   - '+.zufang.com'
