--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2618,7 +2618,6 @@ payload:
   - '+.324.com'
   - '+.3259.com'
   - '+.32800.com'
-  - '+.328888.xyz'
   - '+.328f.com'
   - '+.328vip.com'
   - '+.32ka.com'
@@ -4443,7 +4442,6 @@ payload:
   - '+.52qudao.com'
   - '+.52queji.com'
   - '+.52qumao.com'
-  - '+.52ra3.com'
   - '+.52rd.com'
   - '+.52rd.net'
   - '+.52rental.com'
@@ -28588,6 +28586,7 @@ payload:
   - '+.hzzrmc.com'
   - '+.hzzsbbs.com'
   - '+.hzzsfs.com'
+  - '+.hzzuyin.com'
   - '+.i-27.name'
   - '+.i-520.net'
   - '+.i-ab.com'
@@ -33729,7 +33728,6 @@ payload:
   - '+.kina.cc'
   - '+.kindeditor.net'
   - '+.kindle-china.org'
-  - '+.kindle114.com'
   - '+.kindlehub.mobi'
   - '+.kindlelib.com'
   - '+.kindleport.com'
@@ -46633,7 +46631,6 @@ payload:
   - '+.serholiu.com'
   - '+.servasoft.com'
   - '+.serverless.ink'
-  - '+.serversad.com'
   - '+.servicemesher.com'
   - '+.servicewechat.com'
   - '+.servingcdn.com'
@@ -52388,7 +52385,6 @@ payload:
   - '+.tujian.com'
   - '+.tujidu.com'
   - '+.tujie8.com'
-  - '+.tujiedianying.com'
   - '+.tujiwar.com'
   - '+.tujixiazai.com'
   - '+.tuke8.com'
@@ -61478,7 +61474,6 @@ payload:
   - '+.ysplay.com'
   - '+.ysrh.com'
   - '+.yssm.org'
-  - '+.yssm.tv'
   - '+.yssp88.com'
   - '+.ysstech.com'
   - '+.ysszzs.com'
